--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,6 +1,6 @@
-本研究を進めるにあたり，提案システムへの助言、参考資料の紹介、システム評価などに協力して下さった鎌田先生にはご協力を賜りました．ここに深く御礼申し上げます．その他、提案システムのプロトタイプを見ていただき、意見をくださった2016年1月の「心の可視化研究会」参加者である12名の専門家の皆様にも深く感謝致します．
+本研究を進めるにあたり，提案システムへの助言，参考資料の紹介，システム評価などに協力して下さった鎌田先生にはご協力を賜りました．ここに深く御礼申し上げます．その他，提案システムのプロトタイプを見ていただき，意見をくださった2016年1月の「心の可視化研究会」参加者である12名の専門家の皆様にも深く感謝致します．
 
-本研究を進めるにあたり，有益な御指導，御助言を頂きました京都大学学術情報メディアセンター　ビジュアリゼーション研究分野の小山田耕二教授，学際融合教育研究推進センター政策のための科学ユニットの久木元伸如特定講師，神戸大学 システム情報学研究科の坂本尚久講師に深く感謝致します．
+本研究を進めるにあたり，有益な御指導，御助言を頂きました京都大学学術情報メディアセンタービジュアリゼーション研究分野の小山田耕二教授，学際融合教育研究推進センター政策のための科学ユニットの久木元伸如特定講師，神戸大学 システム情報学研究科の坂本尚久講師に深く感謝致します．
 
 本研究を進めるにあたり，プログラミング技術を始め，様々な御助言を頂きました京都大学大学院工学研究科博士後期課程３年生の尾上洋介氏をはじめとする院生の先輩の皆様に深く感謝致します．
 
