--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,23 +1,30 @@
-本章では、前章で述べた提案システムに対する、カウンセラーの評価について述べる。
+本章では，前章で述べた提案システムに対する，カウンセラーの評価について述べる．
 
-本システム自体に関しては「この研究が進んでいくことによって、心理臨
-床におけるスーパーヴィジョンにおいて、客観性にもとづく指導が可能になって
-いけることを願っております。こういう着想はありませんでしたので、大変期待
-しているところです。」
-とコメントをいただいている。
+本システム自体に関しては「この研究が進んでいくことによって，心理臨
+床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になって
+いけることを願っております．こういう着想はありませんでしたので，大変期待
+しているところです．」
+とコメントをいただいている．
 
 
-本システムの大きな今後の課題として、左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存ないし出力する機能が求められている。
+本システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存ないし出力する機能が求められている．
 
-「長い文章ですので、その日
+「長い文章ですので，その日
 だけの使用では終わらないことが多いため」
-「実際、開くたびに毎回同じことをさせられるのは、大変苦痛になってくるもので
-すので、この点については、ぜひとも改善していただかないと実用できないので
-はないでしょうか。」
-とコメントをいただいている。
+「実際，開くたびに毎回同じことをさせられるのは，大変苦痛になってくるもので
+すので，この点については，ぜひとも改善していただかないと実用できないので
+はないでしょうか．」
+とコメントをいただいている．
 
-アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して、次に記す通りのレビューを得た。「クライエントの発話の分類ですが、自身の症状についての記述は、愛・交友・
-仕事のどれにも当てはまらないことが多く、第４のタスクとされるself task自
-己、第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
-ただく方がいいかもしれません。症状に囚われている患者は、自己の課題が大半
-になるといえます。」
+アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，次に記す通りのレビューを得た．「クライエントの発話の分類ですが，自身の症状についての記述は，愛・交友・
+仕事のどれにも当てはまらないことが多く，第４のタスクとされるself task自
+己，第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
+ただく方がいいかもしれません．症状に囚われているクライエントは，自己の課題が大半
+になるといえます．」
+
+文字の大きさに関して「」
+
+本提案システム全体の配色面に関して「文字の色ですが，黄色と灰色は，バックの白とかぶって見えにくくなっ
+ていると思います．私のモニターのブルーライトカットの影響かもしれませんが，
+特に黄色は見えませんでした．よって，色を変えていただけると助かります．」「青色の【】は黒字と判別
+がつきにくくなりました．」などのコメントをいただいている．
