--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,19 +1,25 @@
-\section{システム自体の評価}
+\section{提案システム自体の評価}
+
+2016年1月の「心の可視化研究会」では，12名の専門家に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価をいただいた．
 
 
-
+ただし前章で述べたとおり保存機能が求められているなど，ビギナーのカウンセラー指導に対して実用的なものになるにはまだまだステップを必要とすると考える．
 
 
 \section{今後の課題}
 
-本研究で得られた結論を踏まえて，今後検討するべき課題を以下にまとめる．
+今後検討するべき課題を以下にまとめる．
 \begin{itemize}
-\item そもそも積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない。縦向きあるいは横向きの棒グラフが妥当なのか、縦幅をとるが累積分布グラフが妥当なのか。
-\item また，患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
-\item 縦棒の上に発言番号を振る
-\item アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して、次に記す通りのレビューを得た。「クライエントの発話の分類ですが、自身の症状についての記述は、愛・交友・
-仕事のどれにも当てはまらないことが多く、第４のタスクとされるself task自
-己、第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
-ただく方がいいかもしれません。症状に囚われている患者は、自己の課題が大半
-になるといえます。」
+\item そもそも積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか，今後検討していく必要性がある．
+\item また，クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
+\item アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，次に記す通りのレビューを得た．「クライエントの発話の分類ですが，自身の症状についての記述は，愛・交友・
+仕事のどれにも当てはまらないことが多く，第４のタスクとされるself task自
+己，第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
+ただく方がいいかもしれません．症状に囚われているクライエントは，自己の課題が大半
+になるといえます」したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要性があると考えられるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
+\item 本提案システム全体の配色面に関して「文字の色ですが，黄色と灰色は，バックの白とかぶって見えにくくなっ
+ていると思います．私のモニターのブルーライトカットの影響かもしれませんが，
+特に黄色は見えませんでした．よって，色を変えていただけると助かります．」「青色の【】は黒字と判別
+がつきにくくなりました．」などのコメントをいただいている．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要性があると考えられる．
+
 \end{itemize}
