--- a/chapter8.tex
+++ b/chapter8.tex
@@ -1,18 +1,15 @@
 \section{結論}
 
-本研究では，システムを開発した．以下に本研究で得られた結論をまとめる．
-\begin{itemize}
-\item 
-\item 
-\end{itemize}
+本研究では，タイムライン形式の時間軸に沿った可視化によって，クライアントとカウンセラーの会話を可視化するWebシステムを開発した．このシステムによって，どのような質問をカウンセラーがクライエントに投げかけるかによって，クライエントがどれだけの分量の回答を行ったか，またどのような「対人関係上の問題」が引き出されたかがすぐにわかるようになった．
 
-「いつもお世話になっております。この研究が進んでいくことによって、心理臨
-床におけるスーパーヴィジョンにおいて、客観性にもとづく指導が可能になって
-いけることを願っております。こういう着想はありませんでしたので、大変期待
-しているところです。」
-「いろいろとご尽力いただき、ありがとうございます。この研究が発展していけ
-ること、心から願っております。」
-とコメントをいただいている
+
+「いつもお世話になっております．この研究が進んでいくことによって，心理臨
+床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になって
+いけることを願っております．こういう着想はありませんでしたので，大変期待
+しているところです．」
+「いろいろとご尽力いただき，ありがとうございます．この研究が発展していけ
+ること，心から願っております」
+とコメントをいただいている．
 
 重要な役割を果たすことが明らかとなった．
 
@@ -20,14 +17,19 @@
 
 本研究で得られた結論を踏まえて，今後検討するべき課題を以下にまとめる．
 \begin{itemize}
-\item そもそも積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない。縦向きあるいは横向きの棒グラフが妥当なのか、縦幅をとるが累積分布グラフが妥当なのか。
-\item また，患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
+\item そもそも積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか．
+\item また，クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 \item 縦棒の上に発言番号を振る
-\item アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して、次に記す通りのレビューを得た。「クライエントの発話の分類ですが、自身の症状についての記述は、愛・交友・
-仕事のどれにも当てはまらないことが多く、第４のタスクとされるself task自
-己、第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
-ただく方がいいかもしれません。症状に囚われている患者は、自己の課題が大半
-になるといえます。」
+\item アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，次に記す通りのレビューを得た．「クライエントの発話の分類ですが，自身の症状についての記述は，愛・交友・
+仕事のどれにも当てはまらないことが多く，第４のタスクとされるself task自
+己，第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
+ただく方がいいかもしれません．症状に囚われているクライエントは，自己の課題が大半
+になるといえます」
+\item 本提案システム全体の配色面に関して「文字の色ですが，黄色と灰色は，バックの白とかぶって見えにくくなっ
+ていると思います．私のモニターのブルーライトカットの影響かもしれませんが，
+特に黄色は見えませんでした．よって，色を変えていただけると助かります．」「青色の【】は黒字と判別
+がつきにくくなりました．」などのコメントをいただいている．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要性があると考えられる．
+\item 本提案システムでは，いただいたカウンセリング書き起こしテキストデータを筆者が手動で指定のフォームのJSONファイルにつくりなおしてから，本提案システムのユーザーであるベテランのカウンセラーにそのJSONファイルを渡して本提案システムをお使いいただいていたが，ユーザー側で簡単に自動でカウンセリング書き起こしテキストデータを変換する機能を搭載する必要性もあると考える．
 \end{itemize}
 
 
