--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 
 \acknowledgements{\input{acknowledgements.tex}}
 
-\bibliographystyle{kueethesis} % まず，文献目録を掲載する tex ファイルを開き、プリアンブルに使用したい BibTeX のスタイルファイル(bstファイル)を指定します
+\bibliographystyle{kueethesis} % まず，文献目録を掲載する tex ファイルを開き，プリアンブルに使用したい BibTeX のスタイルファイル(bstファイル)を指定します
 \bibliography{main}
 
 \end{document}
