--- a/chapter2.tex
+++ b/chapter2.tex
@@ -2,19 +2,19 @@
 
 
 
-KH Coderとは、テキスト文章型のデータを統計分析するためのフリーのソフトウェアである。アンケートの自由記述・インタビュー記録・新聞記事など、さまざまな社会調査データを分析するため、立命館大学の樋口耕一氏が制作したものである。計量テキスト分析またはテキストマイニングの方法に対応している\cite{kh1}。杉浦ら\cite{kango}は成人看護学概論の成長報告書にKH Coderの単語共起ネットワーク図機能を適用することで、成人看護学概論にプロジェクト学習を採用した効果を明らかにした。
+KH Coderとは，テキスト文章型のデータを統計分析するためのフリーのソフトウェアである．アンケートの自由記述・インタビュー記録・新聞記事など，さまざまな社会調査データを分析するため，立命館大学の樋口耕一氏が制作したものである．計量テキスト分析またはテキストマイニングの方法に対応している\cite{kh1}．杉浦ら\cite{kango}は成人看護学概論の成長報告書にKH Coderの単語共起ネットワーク図機能を適用することで，成人看護学概論にプロジェクト学習を採用した効果を明らかにした．
 
 
-%　以下に、KH Coderの主な可視化システムについて紹介する。
+%以下に，KH Coderの主な可視化システムについて紹介する．
 
 
 %\subsection{単語共起ネットワーク図}
 
-KH Coderは、統計計算とグラフィックスのための環境「R」を内部で解析に利用している。
+KH Coderは，統計計算とグラフィックスのための環境「R」を内部で解析に利用している．
 
-KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。\cite{manu}
+KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり，どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である．KH Coderは改行によって段落を認識し，句点によって文を認識する．よってひと段落ないし一文を集計単位として設定することが可能になっている．\cite{manu}
 
-KH Coderのデメリットとして、
+KH Coderのデメリットとして，
 \begin{itemize}
 \item 共起マップ描画とクラスタリングが同時に進行できない
 \item 共起集計単位が「1文」か「1段落」しか選べない
@@ -23,15 +23,15 @@ KH Coderのデメリットとして、
 
 
 
-といったことがあげられる。
+といったことがあげられる．
 
 
 
 %\subsection{自己組織化マップ}
 
-%　自己組織化マップ機能によるカウンセリングテキストデータの単語クラスタリングに基づき、その単語グループ分布を集計した。また、自己組織化マップに描画された単語から手動でマイナスイメージないしプラスイメージの単語を選んでそれぞれグループをつくり、その単語グループ分布を集計した。
+%自己組織化マップ機能によるカウンセリングテキストデータの単語クラスタリングに基づき，その単語グループ分布を集計した．また，自己組織化マップに描画された単語から手動でマイナスイメージないしプラスイメージの単語を選んでそれぞれグループをつくり，その単語グループ分布を集計した．
 
-%　自己組織化マップ単体の問題点としては、クラスターごとの描画色を自分で選べないこと、作成に1分半〜3分時間がかかることが挙げられる。
+%自己組織化マップ単体の問題点としては，クラスターごとの描画色を自分で選べないこと，作成に1分半〜3分時間がかかることが挙げられる．
 
 
 \section{折れ線グラフを用いた会話の可視化}
@@ -41,38 +41,38 @@ KH Coderのデメリットとして、
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-原田ら\cite{voistep}は、マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し、話者ごとの発話量を棒グラフで、発話の重なりを折れ線グラフで可視化したが、カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかを可視化するにはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える。またカウンセリング書き起こしテキストデータにおいては発話の重なりが分からない。
+原田ら\cite{voistep}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで可視化したが，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかを可視化するにはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリング書き起こしテキストデータにおいては発話の重なりが分からない．
 
-庄ら\cite{shou}は、Webカウンセリングシステムにおいて、折れ線グラフを用いて患者の話題をした。しかし、ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容を患者の発言内容と同時に可視化しなければならない。
-
-
-Ericら\cite{taskdriven}は、トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した。パターンを調査することに興味があるユーザーにとって、異なるイベントか時点が2つのモデルで違ってハイライトされるかどうかについて見ることが、重要である場合がある。
-この終了までに、モデル全体で時間とともに傾向を比較するために、我々は非対称の話題フロー図を作成した。
-
-%軸より上に現れている1つのモデルの話題と下記のように見えている他のモデルの話題で、2つのモデルからの話題密度は、横時間軸に沿って計画される。
-
-%2つのモデルでハイライトされている傾向とイベントで左右対称(または非対称)をユーザーが探す。
-
-%特に同じ文書の上でできているモデルのために、大きな変化が、話題の世界的な形にない可能性がある。
-%　しかし、個々の話題の作用は、ユーザーに面白い違いを示すことができる。
-
-%そのような違いを調査するために、Ericらはユーザーが2つのモデル全体で直接整列する話題を比較した。
-
-%他のモデルで、1つのモデルの個々の話題の上のブラッシングは、その最も整列する話題をハイライトする。
-
-%話題をクリックすることは、離れて選ばれたものとその最も接近した試合以外の他の全ての話題を濾過する。
-
-%これは、裂けた、あるいは合併された話題の間の有益な比較を提供することができる。
-
-%そのような話題は時間全体で一様に割られるかもしれなくて、でなければ、交替するかもしれない。そして、異なるイベントをハイライトする。
-
-%分裂が典型的なパラメータの意味論的な一つかランダムな人工品であるかどうか決めるのに、この区別は、ユーザーが役立つことができる。
+庄ら\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いてクライエントの話題をした．しかし，ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容をクライエントの発言内容と同時に可視化しなければならない．
 
 
+Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．パターンを調査することに興味があるユーザーにとって，異なるイベントか時点が2つのモデルで違ってハイライトされるかどうかについて見ることが，重要である場合がある．
+この終了までに，モデル全体で時間とともに傾向を比較するために，我々は非対称の話題フロー図を作成した．
+
+%軸より上に現れている1つのモデルの話題と下記のように見えている他のモデルの話題で，2つのモデルからの話題密度は，横時間軸に沿って計画される．
+
+%2つのモデルでハイライトされている傾向とイベントで左右対称(または非対称)をユーザーが探す．
+
+%特に同じ文書の上でできているモデルのために，大きな変化が，話題の世界的な形にない可能性がある．
+%しかし，個々の話題の作用は，ユーザーに面白い違いを示すことができる．
+
+%そのような違いを調査するために，Ericらはユーザーが2つのモデル全体で直接整列する話題を比較した．
+
+%他のモデルで，1つのモデルの個々の話題の上のブラッシングは，その最も整列する話題をハイライトする．
+
+%話題をクリックすることは，離れて選ばれたものとその最も接近した試合以外の他の全ての話題を濾過する．
+
+%これは，裂けた，あるいは合併された話題の間の有益な比較を提供することができる．
+
+%そのような話題は時間全体で一様に割られるかもしれなくて，でなければ，交替するかもしれない．そして，異なるイベントをハイライトする．
+
+%分裂が典型的なパラメータの意味論的な一つかランダムな人工品であるかどうか決めるのに，この区別は，ユーザーが役立つことができる．
 
 
-一方本研究では、カウンセラーとクライエントの会話において、特にカウンセラーの質問の種類分けをいかに描画するかが重要となる。カウンセラーの質問の種類に応じていかにクライエントの回答を引き出せるかを可視化することが重要であるが、カウンセラーの質問とそれに対するクライエントの回答は交互に出現するので、その情報を含めていかに描画するかが重要である。
 
-そこで提案システムとして、カウンセラーからの質問形態と、 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化した。可視化にあたっては、カウンセリング文字起こしテキストデータを形態素解析し、「家族」「仕事」「友人」に関連する単語を探して仮の分類結果としてグラフを提示する。その上で、ラジオボタンによって「家族」「仕事」「友人」の分類を変更することが出来るようにした。
+
+一方本研究では，カウンセラーとクライエントの会話において，特にカウンセラーの質問の種類分けをいかに描画するかが重要となる．カウンセラーの質問の種類に応じていかにクライエントの回答を引き出せるかを可視化することが重要であるが，カウンセラーの質問とそれに対するクライエントの回答は交互に出現するので，その情報を含めていかに描画するかが重要である．
+
+そこで提案システムとして，カウンセラーからの質問形態と， 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化した．可視化にあたっては，カウンセリング文字起こしテキストデータを形態素解析し，「家族」「仕事」「友人」に関連する単語を探して仮の分類結果としてグラフを提示する．その上で，ラジオボタンによって「家族」「仕事」「友人」の分類を変更することが出来るようにした．
 
 次章ではどのようにシステムを構成したかについて述べる．
