--- a/chapter4.tex
+++ b/chapter4.tex
@@ -4,11 +4,11 @@
 \section{╞■╬╧е╟б╝е┐д╬┴░╜ш═¤}
 
 
-д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе╕х╜╥д╣ды┴┤д╞д╬╝┬╕│д╦дкддд╞бв┬╨╛▌е╟б╝е┐д╧╢ж─╠д╖д╞░╩▓╝д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бг
+д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе╕х╜╥д╣ды┴┤д╞д╬╝┬╕│д╦дкддд╞бд┬╨╛▌е╟б╝е┐д╧╢ж─╠д╖д╞░╩▓╝д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бе
 
 ╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д╧б╓┐┤╬┼╞т▓╩д╦дкд▒ды└▌┐й╛у│▓└ь╠чешб╝ем╬┼╦бе░еыб╝е╫б╫д╬б╓ешб╝ем╬┼╦б╗Ў╬у╕б╞д▓ёб╫╗ё╬┴\cite{txt1}\cite{txt2}\cite{txt3}\cite{txt4}\cite{txt5}дЄ╗╚═╤д╖д┐бе
 
-╕х╜╥д╣ды─є░╞е╖е╣е╞ерд╦╞╔д▀╣■д▐д╗дыд┐дсд╬┴░╜ш═¤д╚д╖д╞бвд▐д║бд│╞ележеєе╗еъеєе░▓єд┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бг
+╕х╜╥д╣ды─є░╞е╖е╣е╞ерд╦╞╔д▀╣■д▐д╗дыд┐дсд╬┴░╜ш═¤д╚д╖д╞бдд▐д║бд│╞ележеєе╗еъеєе░▓єд┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бе
 
 
 \begin{itemize}
@@ -19,40 +19,40 @@
 \item X╟п10╖ю1╞№\cite{txt4}
 \item X╟п10╖ю30╞№\cite{txt5}
 \end{itemize}
-2014╟п9╖ю11╞№д╦д─ддд╞д╧┤╡╝╘A,Bд╬2╠╛дмддд┐д╬д╟бвд│д╬╞№д╬е╟б╝е┐д╦д─ддд╞д╧д╡дщд╦┤╡╝╘д┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бгд▐д┐д│д╬┤╡╝╘Aд╧2014╟п1╖ю29╞№д╬┤╡╝╘д╚╞▒░ь┐═╩кбв┤╡╝╘Bд╧2014╟п11╖ю19╞№д╬┤╡╝╘д╚╞▒░ь┐═╩кд╟двдыбг░╩╣▀бв╦▄╧└╩╕д╦дкддд╞дтд│д╬2╠╛д╬┤╡╝╘дЄ╜чд╦┤╡╝╘A,Bд╚╕╞д╓бг
+2014╟п9╖ю11╞№д╦д─ддд╞д╧епещедеиеєе╚A,Bд╬2╠╛дмддд┐д╬д╟бдд│д╬╞№д╬е╟б╝е┐д╦д─ддд╞д╧д╡дщд╦епещедеиеєе╚д┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бед▐д┐д│д╬епещедеиеєе╚Aд╧2014╟п1╖ю29╞№д╬епещедеиеєе╚д╚╞▒░ь┐═╩кбдепещедеиеєе╚Bд╧2014╟п11╖ю19╞№д╬епещедеиеєе╚д╚╞▒░ь┐═╩кд╟двдыбе░╩╣▀бд╦▄╧└╩╕д╦дкддд╞дтд│д╬2╠╛д╬епещедеиеєе╚дЄ╜чд╦епещедеиеєе╚A,Bд╚╕╞д╓бе
 
-░ь╩¤бвX╟п8╖ю10╞№бвX╟п10╖ю1╞№бвX╟п10╖ю30╞№д╟д╧╞▒░ьд╬░ь╠╛д╬┤╡╝╘дм┬╨╛▌д╚д╡дьд╞ддд┐бг┬╨╛▌е╟б╝е┐╞тд╟д╧б╓┤╡╝╘Aб╫д╚╕╞д╨дьд╞дддыдмбв┴░╜╥д╬┤╡╝╘Aд╚д╧╞▒░ь┐═╩кд╟д╧д╩ддд┐дсбв░╩╣▀бв╦▄╧└╩╕├цд╦дкддд╞д╧┤╡╝╘Cд╚╕╞д╓д│д╚д╦д╣дыбг
+░ь╩¤бдX╟п8╖ю10╞№бдX╟п10╖ю1╞№бдX╟п10╖ю30╞№д╟д╧╞▒░ьд╬░ь╠╛д╬епещедеиеєе╚дм┬╨╛▌д╚д╡дьд╞ддд┐бе┬╨╛▌е╟б╝е┐╞тд╟д╧б╓епещедеиеєе╚Aб╫д╚╕╞д╨дьд╞дддыдмбд┴░╜╥д╬епещедеиеєе╚Aд╚д╧╞▒░ь┐═╩кд╟д╧д╩ддд┐дсбд░╩╣▀бд╦▄╧└╩╕├цд╦дкддд╞д╧епещедеиеєе╚Cд╚╕╞д╓д│д╚д╦д╣дыбе
 
-д│д│д╟2014╟п9╖ю11╞№бв2014╟п11╖ю19╞№бв2014╟п1╖ю29╞№д╦дкддд╞д╧ешб╝емд╬т╘┴█┴░д╚ешб╝емд╬т╘┴█╕хд╬е╞ене╣е╚е╟б╝е┐дм┬╕║▀д╖д┐д╬д╟бвт╘┴█┴░╕хд╟╩мд▒д┐е╞ене╣е╚е╟б╝е┐дт═╤░╒д╖д┐бгд─д▐дъ
+д│д│д╟2014╟п9╖ю11╞№бд2014╟п11╖ю19╞№бд2014╟п1╖ю29╞№д╦дкддд╞д╧ешб╝емд╬т╘┴█┴░д╚ешб╝емд╬т╘┴█╕хд╬е╞ене╣е╚е╟б╝е┐дм┬╕║▀д╖д┐д╬д╟бдт╘┴█┴░╕хд╟╩мд▒д┐е╞ене╣е╚е╟б╝е┐дт═╤░╒д╖д┐бед─д▐дъ
 \begin{itemize}
-\item 2014╟п9╖ю11╞№┤╡╝╘A
-\item 2014╟п9╖ю11╞№┤╡╝╘Aт╘┴█┴░
-\item 2014╟п9╖ю11╞№┤╡╝╘Aт╘┴█╕х
-\item 2014╟п9╖ю11╞№┤╡╝╘B
-\item 2014╟п9╖ю11╞№┤╡╝╘Bт╘┴█┴░
-\item 2014╟п9╖ю11╞№┤╡╝╘Bт╘┴█╕х
-\item 2014╟п11╖ю19╞№┤╡╝╘B
-\item 2014╟п11╖ю19╞№┤╡╝╘Bт╘┴█┴░
-\item 2014╟п11╖ю19╞№┤╡╝╘Bт╘┴█╕х
-\item 2014╟п1╖ю29╞№┤╡╝╘A
-\item 2014╟п1╖ю29╞№┤╡╝╘Aт╘┴█┴░
-\item 2014╟п1╖ю29╞№┤╡╝╘Aт╘┴█╕х
-\item X╟п8╖ю10╞№┤╡╝╘C
-\item X╟п10╖ю1╞№┤╡╝╘C
-\item X╟п10╖ю30╞№┤╡╝╘C
+\item 2014╟п9╖ю11╞№епещедеиеєе╚A
+\item 2014╟п9╖ю11╞№епещедеиеєе╚Aт╘┴█┴░
+\item 2014╟п9╖ю11╞№епещедеиеєе╚Aт╘┴█╕х
+\item 2014╟п9╖ю11╞№епещедеиеєе╚B
+\item 2014╟п9╖ю11╞№епещедеиеєе╚Bт╘┴█┴░
+\item 2014╟п9╖ю11╞№епещедеиеєе╚Bт╘┴█╕х
+\item 2014╟п11╖ю19╞№епещедеиеєе╚B
+\item 2014╟п11╖ю19╞№епещедеиеєе╚Bт╘┴█┴░
+\item 2014╟п11╖ю19╞№епещедеиеєе╚Bт╘┴█╕х
+\item 2014╟п1╖ю29╞№епещедеиеєе╚A
+\item 2014╟п1╖ю29╞№епещедеиеєе╚Aт╘┴█┴░
+\item 2014╟п1╖ю29╞№епещедеиеєе╚Aт╘┴█╕х
+\item X╟п8╖ю10╞№епещедеиеєе╚C
+\item X╟п10╖ю1╞№епещедеиеєе╚C
+\item X╟п10╖ю30╞№епещедеиеєе╚C
 \end{itemize}
-д╬╖╫15╕─д╬е╞ене╣е╚е╟б╝е┐дЄ═╤░╒д╖д┐бг
+д╬╖╫15╕─д╬е╞ене╣е╚е╟б╝е┐дЄ═╤░╒д╖д┐бе
 
-д╡дщд╦бвд│д╬─є░╞е╖е╣е╞ерд╬═н═╤└ндЄ╝ид╣д┐дсд╦╠╧╡╝е╟б╝е┐дЄ1╕─═╤░╒д╖д┐бг
+д╡дщд╦бдд│д╬─є░╞е╖е╣е╞ерд╬═н═╤└ндЄ╝ид╣д┐дсд╦╠╧╡╝е╟б╝е┐дЄ1╕─═╤░╒д╖д┐бе
 
-░╩╛хбв16╕─д╬ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄд╜дьд╛дьjsonе╒ебедеыд╦╩╤┤╣д╖д┐бг[\{"a":"(╦▄╩╕)"\}]д╬╖┴╝░д╟║ю└од╖д┐бе
+░╩╛хбд16╕─д╬ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄд╜дьд╛дьjsonе╒ебедеыд╦╩╤┤╣д╖д┐бе[\{"a":"(╦▄╩╕)"\}]д╬╖┴╝░д╟║ю└од╖д┐бе
 
 \section{─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫│л╚п}
 
 
 
-бб
-╝бд╦бв┴░е╗епе╖ечеєд╟┴░╜ш═¤д╖д┐╕хд╬jsonе╟б╝е┐дЄбв─є░╞е╖е╣е╞ердмд╔дж╜ш═¤д╣дыдлдЄ└т╠└д╣дыбг─є░╞е╖е╣е╞ерд╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:systemtsukaikata}д╦╝ид╣бг
+
+╝бд╦бд┴░е╗епе╖ечеєд╟┴░╜ш═¤д╖д┐╕хд╬jsonе╟б╝е┐дЄбд─є░╞е╖е╣е╞ердмд╔дж╜ш═¤д╣дыдлдЄ└т╠└д╣дыбе─є░╞е╖е╣е╞ерд╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:systemtsukaikata}д╦╝ид╣бе
  \begin{figure}
    \begin{center}
      \includegraphics[width=10cm]{systemtsukaikata.png}
@@ -61,30 +61,30 @@
    \label{fig:systemtsukaikata}
  \end{figure}
 
-д▐д║бве╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
+д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
 ╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkutomoji.jsдЄ╗╚═╤д╖д┐бе
 ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓▓╚┬▓б╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓▓╚┬▓б╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
-бб
-╦▄е╖е╣е╞ерд╟д╧бв┤╡╝╘д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбв╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбгд─д▐дъбв┤╡╝╘д╬░ь╚п╕└д╧бвележеєе╗ещб╝дм├¤дъ╜кдяд├д╞┤╡╝╘дм├¤дъ╗╧дсд╞длдщбв┤╡╝╘дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбгд▐д┐бвележеєе╗ещб╝д╬░ь╚п╕└д╧бв┤╡╝╘дм├¤дъ╜кдяд├д╞длдщбвдвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбвележеєе╗ещб╝дм├¤дъ╜кдяд├д╞┤╡╝╘дм├¤дъ╗╧дсдыд▐д╟д╟двдыбг
+
+╦▄е╖е╣е╞ерд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
 
 jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ╟з╝▒бд┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦бд┴┤│╤╔╜╝ид╬╢ч┼└б╩беб╦д╩ддд╖епеие╣е┴ечеєе▐б╝епб╩бй,?б╦д╟╩╕д╬╜кдядъдЄ╟з╝▒д╣дыдшдж└▀─ъд╡дьд╞дддыбед╜д╬д┐дсбд╧├╝╘дм╕Є┬хд╣дыд┐д╙д╦┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╢ш└┌дь╠▄дЄ╝ид╡д╩ддд╚ддд▒д╩ддбе
 
 \subsubsection{└╤д▀╜┼д═└▐дь└■е░еще╒}
-Fig.2д╦дкддд╞бдд▐д║└╤д▀╜┼д═└▐дь└■е░еще╒д╧┤╡╝╘д╬1▓є1▓єд╬╚п╕└д╬├цд╟д╬бдеве╔ещб╝┐┤═¤│╪д╬│╞еле╞е┤еъд╬╩м╔█дЄ▓─╗ы▓╜д╖д╞дддыбед┐д└д╖1▓є1▓єд╬╚п╕└д╧бд╧├╝╘д╬╕Є┬хдЄ╚п╕└д╬╢ш└┌дь╠▄д╚д╣дыбед│д╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞└─┐зд╧б╓╗┼╗Ў┤╪╖╕б╫бде╘еєеп┐зд╧б╓░жб╩╬°░жбж▓╚┬▓┤╪╖╕б╦б╫бд╬╨┐зд╧б╓╕Є═зб╩═з┐═┤╪╖╕б╦б╫д╦╠й└▄д╦┤╪╖╕д╣ды├▒╕ьдЄ┤▐др╩╕д╬╩м╔█дЄ╔╜д╖д╞дддыбе
-бб▓г╝┤д╧╗■┤╓╝┤дЄ╔╜╕╜д╖д╞дддыбгд┐д└д╖┬╨╛▌е╟б╝е┐д╟двды╜ёдн╡пд│д╖е╞ене╣е╚е╟б╝е┐длдщд╧╝┬║▌д╬╖╨▓с╔├┐Їд╧╞╔д▀╝шдьд╩ддд╬д╟бв╞╔д▀╣■д▐д╗д┐е╟б╝е┐╞тд╦дкд▒ды┤╡╝╘д╬╚п╕└╬╠д╬╣ч╖╫д╦┬╨д╖д╞
+Fig.2д╦дкддд╞бдд▐д║└╤д▀╜┼д═└▐дь└■е░еще╒д╧епещедеиеєе╚д╬1▓є1▓єд╬╚п╕└д╬├цд╟д╬бдеве╔ещб╝┐┤═¤│╪д╬│╞еле╞е┤еъд╬╩м╔█дЄ▓─╗ы▓╜д╖д╞дддыбед┐д└д╖1▓є1▓єд╬╚п╕└д╧бд╧├╝╘д╬╕Є┬хдЄ╚п╕└д╬╢ш└┌дь╠▄д╚д╣дыбед│д╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞└─┐зд╧б╓╗┼╗Ў┤╪╖╕б╫бде╘еєеп┐зд╧б╓░жб╩╬°░жбж▓╚┬▓┤╪╖╕б╦б╫бд╬╨┐зд╧б╓╕Є═зб╩═з┐═┤╪╖╕б╦б╫д╦╠й└▄д╦┤╪╖╕д╣ды├▒╕ьдЄ┤▐др╩╕д╬╩м╔█дЄ╔╜д╖д╞дддыбе
+▓г╝┤д╧╗■┤╓╝┤дЄ╔╜╕╜д╖д╞дддыбед┐д└д╖┬╨╛▌е╟б╝е┐д╟двды╜ёдн╡пд│д╖е╞ене╣е╚е╟б╝е┐длдщд╧╝┬║▌д╬╖╨▓с╔├┐Їд╧╞╔д▀╝шдьд╩ддд╬д╟бд╞╔д▀╣■д▐д╗д┐е╟б╝е┐╞тд╦дкд▒дыепещедеиеєе╚д╬╚п╕└╬╠д╬╣ч╖╫д╦┬╨д╖д╞
 
 \subsubsection{ележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└}
 
-Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐бг░ь╩¤╦▄╕ж╡цд╟д╧бвележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╦дкддд╞бвепещедеиеєе╚д╧╩╕д┤д╚д╦бвележеєе╗ещб╝д╧╚п╕└д┤д╚д╦╔┴▓шдЄ╣╘ддд┐ддбвдлд─┴к┬Є╗ш╔╜╝ид╬д┐дсд╦е░еще╒дЄ╛╩е╣е┌б╝е╣д╖д┐ддд╚дддж┤╤┼└длдщбвележеєе╗ещб╝д╬╚п╕└дЄ▓г╝┤дшдъ▓╝д╦└▐дь└■е░еще╒д╚д╖д╞╔┴▓шд╣дыд╬д╟д╧д╩дпбв┤╡╝╘д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄ╝ид╣└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д═д╞╜─╦└д╚д╖д╞╔╜╝ид╣дыдшджд╦д╖д┐бг
+Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐бе░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╦дкддд╞бдепещедеиеєе╚д╧╩╕д┤д╚д╦бдележеєе╗ещб╝д╧╚п╕└д┤д╚д╦╔┴▓шдЄ╣╘ддд┐ддбддлд─┴к┬Є╗ш╔╜╝ид╬д┐дсд╦е░еще╒дЄ╛╩е╣е┌б╝е╣д╖д┐ддд╚дддж┤╤┼└длдщбдележеєе╗ещб╝д╬╚п╕└дЄ▓г╝┤дшдъ▓╝д╦└▐дь└■е░еще╒д╚д╖д╞╔┴▓шд╣дыд╬д╟д╧д╩дпбдепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄ╝ид╣└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д═д╞╜─╦└д╚д╖д╞╔╜╝ид╣дыдшджд╦д╖д┐бе
 
 
-└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д╩д├д╞дддыбд╗ч┐зд╩ддд╖╟╗дде░еьб╝┐зд╬╜─╦└д╧бдележеєе╗ещб╝д╬╝┴╠ф╞т═╞д╬╖┴┬╓дЄ╝ид╣бе╗ч┐зд╧5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫бд╟╗дде░еьб╝┐зд╧Yes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╔╜╕╜д╖д╞дддыбе┬ш1╛╧д╟╜╥д┘д┐─╠дъбд┤╡╝╘дм▓┐д╦╠ф┬ъ░╒╝▒дЄ┤╢д╕д╞дддыдлдЄележеєе╗еъеєе░д╟░·дн╜╨д╣д╦д╧бдележеєе╗ещб╝д╧б╓╩─д╕дщдьд┐╝┴╠фб╫дшдъдтб╓│лдлдьд┐╝┴╠фб╫дЄд╖д┐д█дждмдшддд╚д╡дьд╞дддыбе
-%ббд│д╬е╖е╣е╞ерд╦дкддд╞бв
+└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д╩д├д╞дддыбд╗ч┐зд╩ддд╖╟╗дде░еьб╝┐зд╬╜─╦└д╧бдележеєе╗ещб╝д╬╝┴╠ф╞т═╞д╬╖┴┬╓дЄ╝ид╣бе╗ч┐зд╧5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫бд╟╗дде░еьб╝┐зд╧Yes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╔╜╕╜д╖д╞дддыбе┬ш1╛╧д╟╜╥д┘д┐─╠дъбдепещедеиеєе╚дм▓┐д╦╠ф┬ъ░╒╝▒дЄ┤╢д╕д╞дддыдлдЄележеєе╗еъеєе░д╟░·дн╜╨д╣д╦д╧бдележеєе╗ещб╝д╧б╓╩─д╕дщдьд┐╝┴╠фб╫дшдъдтб╓│лдлдьд┐╝┴╠фб╫дЄд╖д┐д█дждмдшддд╚д╡дьд╞дддыбе
+%д│д╬е╖е╣е╞ерд╦дкддд╞бд
 
 %\subsection{╖ы▓╠}
 
-бб
-╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1mogi2}бд2014╟п11╖ю╕б╞д▓ё ┤╡╝╘Aт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1a0911go}бд2015╟п11╖ю╕б╞д▓ё ┤╡╝╘Cд╬е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1_1002}д╦╝ид╣бе
+
+╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1mogi2}бд2014╟п11╖ю╕б╞д▓ё епещедеиеєе╚Aт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1a0911go}бд2015╟п11╖ю╕б╞д▓ё епещедеиеєе╚Cд╬е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1_1002}д╦╝ид╣бе
  \begin{figure}
    \begin{center}
      \includegraphics[width=10cm]{system1mogi2.png}
@@ -110,15 +110,15 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-бб
 
-бб
-бб
+
+
+
 
 %\subsection{╣═╗б}
-%епещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбвележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дтеще╕еке▄е┐еєд╦дшд├д╞╝ъ╞░д╟╣╘дидыдшджд╦╜д└╡д╖д┐ддбед▐д┐бвд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╩ддд╚╣═╗бд╖дмд┐ддд╬д╟бде▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юдъд┐ддбг
+%епещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дтеще╕еке▄е┐еєд╦дшд├д╞╝ъ╞░д╟╣╘дидыдшджд╦╜д└╡д╖д┐ддбед▐д┐бдд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╩ддд╚╣═╗бд╖дмд┐ддд╬д╟бде▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юдъд┐ддбе
 
-%╕╢╩╕длдщбде╗еще╘е╣е╚длдщ┤╡╝╘д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бд┤╡╝╘д╬╚п╕└дЄджд╩дмд╖д╞┤╡╝╘╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
+%╕╢╩╕длдщбдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бдепещедеиеєе╚д╬╚п╕└дЄджд╩дмд╖д╞епещедеиеєе╚╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
 
 
 
@@ -129,15 +129,15 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 %\subsubsection{едеєе┐ещепе╞еге╓└ндмд╩дд}
-%╔┴▓ш╕хд╦еще╕еке▄е┐еєдЄ╩╤дид╞дт╚┐▒■дмд╩ддбг╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыд│д╚дм╡сдсдщдьд┐бе
+%╔┴▓ш╕хд╦еще╕еке▄е┐еєдЄ╩╤дид╞дт╚┐▒■дмд╩ддбе╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыд│д╚дм╡сдсдщдьд┐бе
 
 %\subsubsection{б╓д╜д╬┬╛б╫}
-%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбв┴ъд┼д┴дф└д┤╓╧├дЄб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╣═дидщдьдыбг─є░╞е╖е╣е╞ер1д╦дкддд╞д╧бвб╓д╩д╝б╫б╓▓┐б╫д╩д╔д╬5W1HдЄ┐╓дпдшджд╩╡┐╠ф╗ыдЄ┤▐др╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╚д╖д╞─ъ╡┴д╖бвд╜дь░╩│░дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚─ъ╡┴д╖д╞ддд┐д╬д╟бв─є░╞е╖е╣е╞ер1д╦дкд▒дыб╓╩─д╕дщдьд┐╝┴╠фб╫дЄд╡дщд╦бв░╩╣▀д╬е╖е╣е╞ерд╦дкддд╞б╓╩─д╕дщдьд┐╝┴╠фб╫д╚б╓д╜д╬┬╛б╫д╦дяд▒ды╔м═╫дмдвдыд╚╣═дидщдьдыбг
+%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъд┼д┴дф└д┤╓╧├дЄб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╣═дидщдьдыбе─є░╞е╖е╣е╞ер1д╦дкддд╞д╧бдб╓д╩д╝б╫б╓▓┐б╫д╩д╔д╬5W1HдЄ┐╓дпдшджд╩╡┐╠ф╗ыдЄ┤▐др╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╚д╖д╞─ъ╡┴д╖бдд╜дь░╩│░дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚─ъ╡┴д╖д╞ддд┐д╬д╟бд─є░╞е╖е╣е╞ер1д╦дкд▒дыб╓╩─д╕дщдьд┐╝┴╠фб╫дЄд╡дщд╦бд░╩╣▀д╬е╖е╣е╞ерд╦дкддд╞б╓╩─д╕дщдьд┐╝┴╠фб╫д╚б╓д╜д╬┬╛б╫д╦дяд▒ды╔м═╫дмдвдыд╚╣═дидщдьдыбе
 
 
 %\subsubsection{еще╕еке▄е┐еє╔╜╝и╗■┤╓}
 
-%ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыд╬╞╔д▀╣■д▀│л╗╧длдщ┴к┬Є╗шд╬╔╜╝ид▐д╟д╦╠є10╔├длдлдыд╬д╟бвд│д╬├╗╜╠дм╡сдсдщдьдыбе
+%ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыд╬╞╔д▀╣■д▀│л╗╧длдщ┴к┬Є╗шд╬╔╜╝ид▐д╟д╦╠є10╔├длдлдыд╬д╟бдд│д╬├╗╜╠дм╡сдсдщдьдыбе
 
 
 
@@ -146,7 +146,7 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %\section{─є░╞е╖е╣е╞ерг▓}
 
 
-%─є░╞е╖е╣е╞ер2д╟└ь╠ч▓╚длдщд╡дьд┐╗╪┼ждЄ╕╡д╦╜д└╡дкдшд╙▓■┴▒дЄ╣╘ддбв─є░╞е╖е╣е╞ер3дЄ║ю└од╖д┐бг
+%─є░╞е╖е╣е╞ер2д╟└ь╠ч▓╚длдщд╡дьд┐╗╪┼ждЄ╕╡д╦╜д└╡дкдшд╙▓■┴▒дЄ╣╘ддбд─є░╞е╖е╣е╞ер3дЄ║ю└од╖д┐бе
 
 
 
@@ -154,24 +154,24 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %д│д│д╟д╧╝чд╦бд─є░╞е╖е╣е╞ер2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
 
 %\subsubsection{д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд}
-%─є░╞е╖е╣е╞ерг▒д╟д╧бвд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╞ддд╩длд├д┐бгд╜д╬╠ф┬ъдЄ▓Є╖шд╣дыд┐дсд╦бв─є░╞е╖е╣е╞ерг▓д╦дкддд╞д╧бве▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юд├д┐беележеєе╗ещб╝длдщд╬╝┴╠фд╬╢ш╩мд▒дЄ╝ид╣│╞╜─╦└д╦д─ддд╞бдд╜дьд╛дьд╜д╬╛хдЄе▐еже╣екб╝е╨б╝д╣дыд┐д╙д╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дЄ╔┴▓шд╣дыSVG╬╬░шд╬д╣д░╛хд╦бд│╞б╣д╜д╬╜─╦└дм╗╪д╖╝ид╣ележеєе╗ещб╝длдщд╬╝┴╠фд╦┬╨▒■д╣ды╚п╕└бддкдшд╙бдд╜д╬ележеєе╗ещб╝д╬╚п╕└длдщбд┤╡╝╘д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дЄ┤▐дсд╞д╜дьд╛дь┴░╕х3╚п╕└д║д─дЄ╔┴▓шд╣дыдшджд╦е╫еэе░ещерд╖д┐бед─д▐дъбд┤╡╝╘д╬╚п╕└дм┴░╕х2╚п╕└д║д─бдележеєе╗ещб╝д╬╚п╕└дм3╚п╕└╔╜╝ид╡дьд╞дддыдшджд╦д╖д┐бе
+%─є░╞е╖е╣е╞ерг▒д╟д╧бдд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╞ддд╩длд├д┐бед╜д╬╠ф┬ъдЄ▓Є╖шд╣дыд┐дсд╦бд─є░╞е╖е╣е╞ерг▓д╦дкддд╞д╧бде▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юд├д┐беележеєе╗ещб╝длдщд╬╝┴╠фд╬╢ш╩мд▒дЄ╝ид╣│╞╜─╦└д╦д─ддд╞бдд╜дьд╛дьд╜д╬╛хдЄе▐еже╣екб╝е╨б╝д╣дыд┐д╙д╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дЄ╔┴▓шд╣дыSVG╬╬░шд╬д╣д░╛хд╦бд│╞б╣д╜д╬╜─╦└дм╗╪д╖╝ид╣ележеєе╗ещб╝длдщд╬╝┴╠фд╦┬╨▒■д╣ды╚п╕└бддкдшд╙бдд╜д╬ележеєе╗ещб╝д╬╚п╕└длдщбдепещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дЄ┤▐дсд╞д╜дьд╛дь┴░╕х3╚п╕└д║д─дЄ╔┴▓шд╣дыдшджд╦е╫еэе░ещерд╖д┐бед─д▐дъбдепещедеиеєе╚д╬╚п╕└дм┴░╕х2╚п╕└д║д─бдележеєе╗ещб╝д╬╚п╕└дм3╚п╕└╔╜╝ид╡дьд╞дддыдшджд╦д╖д┐бе
 
 %\subsubsection{едеєе┐ещепе╞еге╓└н}
-%д▐д┐бд─є░╞е╖е╣е╞ер1д╦дкддд╞д╧едеєе┐ещепе╞еге╓└ндмд╩длд├д┐бе│╞├▒╕ьдЄ┤╡╝╘д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╦д─ддд╞бд─є░╞е╖е╣е╞ер1д╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бдг▒▓єг▒▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞ддд┐бе
+%д▐д┐бд─є░╞е╖е╣е╞ер1д╦дкддд╞д╧едеєе┐ещепе╞еге╓└ндмд╩длд├д┐бе│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╦д─ддд╞бд─є░╞е╖е╣е╞ер1д╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бдг▒▓єг▒▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞ддд┐бе
 
-%д╖длд╖─є░╞е╖е╣е╞ер2д╟д╧бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦▓■┴▒д╖д┐бед▐д┐бд┤╡╝╘д╬╧├┬ъд╬╩м╠юдЄ│╞├▒╕ьд┤д╚д╦╖шдс┬╟д┴д╖д┐дтд╬д└д▒д╟д╩дпбд╖шдс┬╟д┴д╖д╞ддд╩дддтд╬д╦┤╪д╖д╞дт┴к┬Є╗шдЄ╔╜╝ид╖┴к┬Єд╟дндыдшджд╦д╖д┐бе
+%д╖длд╖─є░╞е╖е╣е╞ер2д╟д╧бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦▓■┴▒д╖д┐бед▐д┐бдепещедеиеєе╚д╬╧├┬ъд╬╩м╠юдЄ│╞├▒╕ьд┤д╚д╦╖шдс┬╟д┴д╖д┐дтд╬д└д▒д╟д╩дпбд╖шдс┬╟д┴д╖д╞ддд╩дддтд╬д╦┤╪д╖д╞дт┴к┬Є╗шдЄ╔╜╝ид╖┴к┬Єд╟дндыдшджд╦д╖д┐бе
 
 
 %\subsubsection{б╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫}
 %д╡дщд╦─є░╞е╖е╣е╞ерд╟д╧бдележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞дтбд5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫д╩д╬длбдYes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫д╩д╬длбддвдыддд╧╠╡┬╠╧├бж┴ъд┼д┴д╩д╔бдд╔д┴дщд╦дт╩м╬рд╡дьд╩дддшджд╩б╓д╜д╬┬╛б╫д╩д╬длдЄбдецб╝е╢б╝дм╝ъ╞░д╟╜д└╡д╟дндыдшджд╦д╖д┐бе
 
-%ележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞бдд╜дьд╛дьб╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫д╬┴к┬Є╗шдм╔╜╝ид╡дьбд─є░╞е╖е╣е╞ер1д╟═╜┬мд╡дьд┐┴к┬Є╗шд╦двдщдлд╕дсе┴езе├епдм╞■д├д╞дддыдшдже╫еэе░ещерд╖д┐бед╜д╖д╞бд│╞├▒╕ьдЄ┤╡╝╘д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╚╞▒══д╦бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦д╖д┐бе
+%ележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞бдд╜дьд╛дьб╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫д╬┴к┬Є╗шдм╔╜╝ид╡дьбд─є░╞е╖е╣е╞ер1д╟═╜┬мд╡дьд┐┴к┬Є╗шд╦двдщдлд╕дсе┴езе├епдм╞■д├д╞дддыдшдже╫еэе░ещерд╖д┐бед╜д╖д╞бд│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╚╞▒══д╦бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦д╖д┐бе
 
 
 %\subsubsection{б╓д╜д╬┬╛б╫}
-%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбв┴ъд┼д┴дф└д┤╓╧├д╩д╔дЄ┤▐дрб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╗╪┼жд╡дьд┐д╬д╟бв─є░╞е╖е╣е╞ерг▒д╬╗┼┴╚д▀д╦дкддд╞б╓│лдлдьд┐╝┴╠фб╫д╚╚╜─ъд╡дьд╩длд├д┐ележеєе╗ещб╝д╬╚п╕└д╬джд┴бв╜к╜ї╗ьб╓длб╫дЄ┤▐дрдтд╬дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚д╖бвд╜дь░╩│░дЄб╓д╜д╬┬╛б╫д╚д╖д┐бг
+%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъд┼д┴дф└д┤╓╧├д╩д╔дЄ┤▐дрб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╗╪┼жд╡дьд┐д╬д╟бд─є░╞е╖е╣е╞ерг▒д╬╗┼┴╚д▀д╦дкддд╞б╓│лдлдьд┐╝┴╠фб╫д╚╚╜─ъд╡дьд╩длд├д┐ележеєе╗ещб╝д╬╚п╕└д╬джд┴бд╜к╜ї╗ьб╓длб╫дЄ┤▐дрдтд╬дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚д╖бдд╜дь░╩│░дЄб╓д╜д╬┬╛б╫д╚д╖д┐бе
 
-%д▐д┐бв└╤д▀╜┼д═└▐дь└■е░еще╒╛хд╦дкддд╞бвб╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╟╗дде░еьб╝┐зд╬╜─╦└д╟бвб╓д╜д╬┬╛б╫дЄ╟Ўдде░еьб╝┐зд╬╜─╦└д╟╔┴▓шд╖д┐бг
+%д▐д┐бд└╤д▀╜┼д═└▐дь└■е░еще╒╛хд╦дкддд╞бдб╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╟╗дде░еьб╝┐зд╬╜─╦└д╟бдб╓д╜д╬┬╛б╫дЄ╟Ўдде░еьб╝┐зд╬╜─╦└д╟╔┴▓шд╖д┐бе
 
 
 %\subsubsection{еще╕еке▄е┐еє╔╜╝и╗■┤╓}
@@ -183,7 +183,7 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 %\subsection{╖ы▓╠}
 
-%бб╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:2_mogi}бдX╟п8╖ю┤╡╝╘Cе╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:2_0801}д╦╝ид╣бе
+%╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:2_mogi}бдX╟п8╖юепещедеиеєе╚Cе╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:2_0801}д╦╝ид╣бе
 % \begin{figure}
 %   \begin{center}
 %     \includegraphics[width=10cm]{2_mogi.png}
@@ -195,31 +195,31 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %   \begin{center}
 %     \includegraphics[width=10cm]{2_0801.png}
 %   \end{center}
-%   \caption{─є░╞е╖е╣е╞ерг▓д╬X╟п8╖ю┤╡╝╘Cе╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
+%   \caption{─є░╞е╖е╣е╞ерг▓д╬X╟п8╖юепещедеиеєе╚Cе╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
 %   \label{fig:2_0801}
 % \end{figure}
 %
-%ббб╓░жб╫б╓╗┼╗Ўб╫д╩д╔д╬╩м╬рд╦┴к┬Єд╣ды├▒╕ьд╦д─ддд╞бд╔╩╗ьеье┘еыб╩╞░╗ьбж╖┴═╞╗ьбж╠╛╗ьд╩д╔б╦д╟╩м╬рд╣дыд│д╚д╧╔╘▓─╟╜д└д╚╣═дидщдьдыбед┐д╚дид╨бдб╓╗┼╗Ўб╫д╚дддж├▒╕ьдм╜╨д╞днд╞дтбд░жд╬▓▌┬ъд╚д╖д╞д╬╔╫д╦д─ддд╞д╬д╧д╩д╖дЄд╖д╞дддыд╚днд╧бдд╜д╬е╖е┴ехеиб╝е╖ечеєд╟д╧░жд╬▓▌┬ъд╦д╩дыбе╞░╗ьбд╖┴═╞╗ьдт╞▒д╕дпбдд╔д╬▓▌┬ъд╬е╖е┴ехеиб╝е╖ечеєд╬├цд╟╗╚═╤д╡дьд╞дддыдлд╦дшд├д╞д╔д╬╩м╬рдлдм╖ш─ъд╡дьдыд╬д╟бдд│д╬╩м╬р╩¤╦бд╧╔╘┼м┼Ўд╚╣═дидщдьдыбе
-%ббдшд├д╞бд╧├┬ъдмд│д╬г│д─д╬▓▌┬ъд╬д╔дьд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рд╟д╖длд╟днд╩ддд╚╣═дидщдьдыбед─д▐дъбдг▒╩╕дмд╔д╬▓▌┬ъд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рдм┼м┼Ўд└д╚╣═дидщдьдыбе
-%ббд┐д╚дид╨бдб╓джд┴д╬╔╫д╧╗┼╗Ўд╦дддпд╬дЄ╖∙дмд├д╞бд╦ш─л╡пднд╞д│д╩дддєд╟д╣бед╜дьдЄ╕лд╞дддыд└д▒д╟╩вдм╬йд─дєд╟д╣бе╝л╩мд╬╞▒╬╜дм╞▒д╕дшджд╦╗┼╗Ўд╦╣╘днд┐дмдщд╩дпд╞─л╡пднд╩длд├д┐д╚дддж╧├дЄ╩╣ддд╞дтбдд╡д█д╔╩вд╧╬йд┴д▐д╗дєдмбд╔╫дмд╜джд╩дыд╬д╧└ф┬╨д╦╡Ўд╗д╩ддбкбкб╫д╚дддждшджд╩╩╕╛╧д╦д─ддд╞д╧бд║╟╜щд╬╩╕д╧░жд╬е┐е╣епбдбб┬шг▓╩╕д╧╗┼╗Ўд╬е┐е╣епбд┬шг│╩╕д╧░жд╬е┐е╣епд╚д╚дщдидщдьдыбе
+%б╓░жб╫б╓╗┼╗Ўб╫д╩д╔д╬╩м╬рд╦┴к┬Єд╣ды├▒╕ьд╦д─ддд╞бд╔╩╗ьеье┘еыб╩╞░╗ьбж╖┴═╞╗ьбж╠╛╗ьд╩д╔б╦д╟╩м╬рд╣дыд│д╚д╧╔╘▓─╟╜д└д╚╣═дидщдьдыбед┐д╚дид╨бдб╓╗┼╗Ўб╫д╚дддж├▒╕ьдм╜╨д╞днд╞дтбд░жд╬▓▌┬ъд╚д╖д╞д╬╔╫д╦д─ддд╞д╬д╧д╩д╖дЄд╖д╞дддыд╚днд╧бдд╜д╬е╖е┴ехеиб╝е╖ечеєд╟д╧░жд╬▓▌┬ъд╦д╩дыбе╞░╗ьбд╖┴═╞╗ьдт╞▒д╕дпбдд╔д╬▓▌┬ъд╬е╖е┴ехеиб╝е╖ечеєд╬├цд╟╗╚═╤д╡дьд╞дддыдлд╦дшд├д╞д╔д╬╩м╬рдлдм╖ш─ъд╡дьдыд╬д╟бдд│д╬╩м╬р╩¤╦бд╧╔╘┼м┼Ўд╚╣═дидщдьдыбе
+%дшд├д╞бд╧├┬ъдмд│д╬г│д─д╬▓▌┬ъд╬д╔дьд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рд╟д╖длд╟днд╩ддд╚╣═дидщдьдыбед─д▐дъбдг▒╩╕дмд╔д╬▓▌┬ъд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рдм┼м┼Ўд└д╚╣═дидщдьдыбе
+%д┐д╚дид╨бдб╓джд┴д╬╔╫д╧╗┼╗Ўд╦дддпд╬дЄ╖∙дмд├д╞бд╦ш─л╡пднд╞д│д╩дддєд╟д╣бед╜дьдЄ╕лд╞дддыд└д▒д╟╩вдм╬йд─дєд╟д╣бе╝л╩мд╬╞▒╬╜дм╞▒д╕дшджд╦╗┼╗Ўд╦╣╘днд┐дмдщд╩дпд╞─л╡пднд╩длд├д┐д╚дддж╧├дЄ╩╣ддд╞дтбдд╡д█д╔╩вд╧╬йд┴д▐д╗дєдмбд╔╫дмд╜джд╩дыд╬д╧└ф┬╨д╦╡Ўд╗д╩ддбкбкб╫д╚дддждшджд╩╩╕╛╧д╦д─ддд╞д╧бд║╟╜щд╬╩╕д╧░жд╬е┐е╣епбд┬шг▓╩╕д╧╗┼╗Ўд╬е┐е╣епбд┬шг│╩╕д╧░жд╬е┐е╣епд╚д╚дщдидщдьдыбе
 
 
-%ббд╜д╬┬╛бд╗╚═╤д╖д┐║▌д╦╔╘╩╪д└д╚┤╢д╕д┐д│д╚бддтд╖╝┬═╤┼кд╩дтд╬д╦д╣дыд╦д╧д╔дждддж╡б╟╜дмд─ддд╞дддьд╨дддддл┼∙бд░╒╕лдЄддд┐д└ддд┐бе
+%д╜д╬┬╛бд╗╚═╤д╖д┐║▌д╦╔╘╩╪д└д╚┤╢д╕д┐д│д╚бддтд╖╝┬═╤┼кд╩дтд╬д╦д╣дыд╦д╧д╔дждддж╡б╟╜дмд─ддд╞дддьд╨дддддл┼∙бд░╒╕лдЄддд┐д└ддд┐бе
 
-%бб╚п╧├╬╠д╬└▐дь└■е░еще╒д╬┐з╩мд▒д╦д─ддд╞д╧бдд╜д╬┐═д╬┤╪┐┤дм╕■ддд╞ддды╧├┬ъд╦дшд├д╞╩мд▒дщдьдыд╬д╟бд╩м╬р╩¤╦бд╬╣й╔╫дм╔м═╫д└д╚╣═дидщдьдыбе
-%ббд▐д┐╝┬║▌д╦д╧бд╧├д╖д╞ддды├цд╟┤╪┐┤дмд╔дєд╔дє╚Їдєд╟дддп┐═дм┬┐ддд┐дсбдд╔джд╖д╞дддпдл
-%ббддд║дьд╦д╖д╞дтбде╗еще╘е╣е╚д╬╚п╧├д╦д─ддд╞д╧бд╜╜╩мд╚дщдидщдьдыд╚╗╫ддд▐д╣бе╝┴╠ф╖┴╝░б╩│лдлдьд┐бд╩─д╕дщдьд┐б╦д╚▓Є╝сд╚бд┴ъ─╚бжд╜д╬┬╛д╚╠╡┬╠╧├д╦╩мд▒дыбе╠╡┬╠╧├д╚┴ъ─╚д╧╞▒еье┘еыд╟д╧д╩дпбдележеєе╗еъеєе░д╦╔м═╫длд╔дждлд╬╜┼д▀дм░уджд╬д╟бд╩мд▒д┐╩¤дмдшддд╚╣═дидщдьдыбе
-%ббе╗еще╘е╣е╚д╬е╣б╝е╤б╝еЇеге╕ечеєд╚д╖д╞╗╚═╤д╖д╞дддп╩¤дмбд║гд╧┬┼┼Ўд└д╚╣═дидщдьдыбед╜д╬д┐дсд╦д╧бде╗еще╘е╣е╚д╬╚п╧├╞т═╞дЄ└╡│╬д╦╩м╬рд╖д╞дддп╩¤дм┼к│╬д╦▓─╗ы▓╜д╟дндыд╚╣═дидщдьдыбе
-%бб┐┤═¤╬╫╛▓д╦дкд▒дые╣б╝е╤б╝еЇеге╕ечеєд╦дкддд╞бд╡╥┤╤└нд╦дтд╚д┼дп╗╪╞│дм▓─╟╜д╦д╩дыд│д╚дм╡сдсдщдьдыбг
-%бб░ь╔Їд╬jsonе╒ебедеыд╦д─ддд╞бв╝┴╠ф╖┴╝░д╬└▀─ъд╦дкддд╞бде╗еще╘е╣е╚д╚епещедеиеєе╚д╬▓ё╧├дм║о║▀д╖д╞дкдъбдепещедеиеєе╚д╬▓ё╧├д╦д─ддд╞д╧└▀─ъдмд╟днд╩длд├д┐бед│д│д╟епещедеиеєе╚д╬▓ё╧├╩╕дЄ╝┴╠ф╖┴╝░д╚╠╡┬╠╧├д╦дяд▒ды░╒╠гд╧д╩ддд╬д╟бд▓ё╧├╖┴╝░д╦д─ддд╞д╧бде╗еще╘е╣е╚д╬╚п╧├д└д▒дяд▒дыд┘днд╟двдыбе
-%ббд▐д┐бдд│д╬дшджд╩║о║▀дмдвд├д┐д╚днд╦бдецб╝е╢б╝┬жд╟║я╜№д╟дндыдшджд╦д╩дыд╚е╣е╘б╝е╟егб╝д╦╜д└╡дм▓─╟╜д╚╣═дидщдьдыбе
+%╚п╧├╬╠д╬└▐дь└■е░еще╒д╬┐з╩мд▒д╦д─ддд╞д╧бдд╜д╬┐═д╬┤╪┐┤дм╕■ддд╞ддды╧├┬ъд╦дшд├д╞╩мд▒дщдьдыд╬д╟бд╩м╬р╩¤╦бд╬╣й╔╫дм╔м═╫д└д╚╣═дидщдьдыбе
+%д▐д┐╝┬║▌д╦д╧бд╧├д╖д╞ддды├цд╟┤╪┐┤дмд╔дєд╔дє╚Їдєд╟дддп┐═дм┬┐ддд┐дсбдд╔джд╖д╞дддпдл
+%ддд║дьд╦д╖д╞дтбдележеєе╗ещб╝д╬╚п╧├д╦д─ддд╞д╧бд╜╜╩мд╚дщдидщдьдыд╚╗╫ддд▐д╣бе╝┴╠ф╖┴╝░б╩│лдлдьд┐бд╩─д╕дщдьд┐б╦д╚▓Є╝сд╚бд┴ъ─╚бжд╜д╬┬╛д╚╠╡┬╠╧├д╦╩мд▒дыбе╠╡┬╠╧├д╚┴ъ─╚д╧╞▒еье┘еыд╟д╧д╩дпбдележеєе╗еъеєе░д╦╔м═╫длд╔дждлд╬╜┼д▀дм░уджд╬д╟бд╩мд▒д┐╩¤дмдшддд╚╣═дидщдьдыбе
+%ележеєе╗ещб╝д╬е╣б╝е╤б╝еЇеге╕ечеєд╚д╖д╞╗╚═╤д╖д╞дддп╩¤дмбд║гд╧┬┼┼Ўд└д╚╣═дидщдьдыбед╜д╬д┐дсд╦д╧бдележеєе╗ещб╝д╬╚п╧├╞т═╞дЄ└╡│╬д╦╩м╬рд╖д╞дддп╩¤дм┼к│╬д╦▓─╗ы▓╜д╟дндыд╚╣═дидщдьдыбе
+%┐┤═¤╬╫╛▓д╦дкд▒дые╣б╝е╤б╝еЇеге╕ечеєд╦дкддд╞бд╡╥┤╤└нд╦дтд╚д┼дп╗╪╞│дм▓─╟╜д╦д╩дыд│д╚дм╡сдсдщдьдыбе
+%░ь╔Їд╬jsonе╒ебедеыд╦д─ддд╞бд╝┴╠ф╖┴╝░д╬└▀─ъд╦дкддд╞бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├дм║о║▀д╖д╞дкдъбдепещедеиеєе╚д╬▓ё╧├д╦д─ддд╞д╧└▀─ъдмд╟днд╩длд├д┐бед│д│д╟епещедеиеєе╚д╬▓ё╧├╩╕дЄ╝┴╠ф╖┴╝░д╚╠╡┬╠╧├д╦дяд▒ды░╒╠гд╧д╩ддд╬д╟бд▓ё╧├╖┴╝░д╦д─ддд╞д╧бдележеєе╗ещб╝д╬╚п╧├д└д▒дяд▒дыд┘днд╟двдыбе
+%д▐д┐бдд│д╬дшджд╩║о║▀дмдвд├д┐д╚днд╦бдецб╝е╢б╝┬жд╟║я╜№д╟дндыдшджд╦д╩дыд╚е╣е╘б╝е╟егб╝д╦╜д└╡дм▓─╟╜д╚╣═дидщдьдыбе
 
 %\subsection{▓▌┬ъ}
 
-%бб┤╡╝╘д╬╚п╕└д╦д─ддд╞
+%епещедеиеєе╚д╬╚п╕└д╦д─ддд╞
 %├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣д┘дн
-%е╗еще╘е╣е╚д╬╚п╕└д╦д─ддд╞
-%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбвб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓╠╡┬╠╧├б╫дт╩м╬рд╣д┘дн
+%ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞
+%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓╠╡┬╠╧├б╫дт╩м╬рд╣д┘дн
 %┴к┬Є╗шдм┬┐д╣доды
 %╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞
 
@@ -227,7 +227,7 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-%ббе╗еще╘е╣е╚д╬╝┴╠фдЄ╔╜д╣╜─╝┤д╬┬└д╡дф┤╓│╓дЄе╗еще╘е╣е╚дф┤╡╝╘д╬╚п╕└┐Їд╦▒■д╕д╞╩╤╣╣д╡дьд┐е╟е╢едеєдЄ─є░╞д╖д┐бг
+%ележеєе╗ещб╝д╬╝┴╠фдЄ╔╜д╣╜─╝┤д╬┬└д╡дф┤╓│╓дЄележеєе╗ещб╝дфепещедеиеєе╚д╬╚п╕└┐Їд╦▒■д╕д╞╩╤╣╣д╡дьд┐е╟е╢едеєдЄ─є░╞д╖д┐бе
 
 
 
@@ -235,7 +235,7 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %\section{─є░╞е╖е╣е╞ерг│}
 
 
-%бб─є░╞е╖е╣е╞ер2д╟ележеєе╗ещб╝длдщд╡дьд┐╗╪┼ждЄ╕╡д╦бв─є░╞е╖е╣е╞ер3дЄ║ю└од╖д┐бг
+%─є░╞е╖е╣е╞ер2д╟ележеєе╗ещб╝длдщд╡дьд┐╗╪┼ждЄ╕╡д╦бд─є░╞е╖е╣е╞ер3дЄ║ю└од╖д┐бе
 
 
 
@@ -244,10 +244,10 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 %д│д│д╟д╧╝чд╦бд─є░╞е╖е╣е╞ер2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
 
-бб
+
 %\subsubsection{б╓▓Є╝сб╫бжб╓┴ъд┼д┴б╫бжб╓╠╡┬╠╧├б╫}
-%─є░╞е╖е╣е╞ер2д╦дкддд╞бв┤╡╝╘д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╖д╞ддд┐бг
-%д╜д│длдщд╡дщд╦бв─є░╞е╖е╣е╞ер3д╦дкддд╞д╧бвележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓д╜д╬┬╛б╫дЄ└▀д▒бдд╡дщд╦б╓д╜д╬┬╛б╫дЄб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓╠╡┬╠╧├б╫д╬3д─д╦╩м╬рд╖д┐бе
+%─є░╞е╖е╣е╞ер2д╦дкддд╞бдепещедеиеєе╚д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╖д╞ддд┐бе
+%д╜д│длдщд╡дщд╦бд─є░╞е╖е╣е╞ер3д╦дкддд╞д╧бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓д╜д╬┬╛б╫дЄ└▀д▒бдд╡дщд╦б╓д╜д╬┬╛б╫дЄб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓╠╡┬╠╧├б╫д╬3д─д╦╩м╬рд╖д┐бе
 
 
 
@@ -255,27 +255,27 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 %\subsubsection{д╜д╬┬╛д╬▓■┴▒┼└}
 %\begin{itemize}
-% \item ┤╡╝╘д╬╚п╕└д╦д─ддд╞бв├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦д╖д┐бг
+% \item епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦д╖д┐бе
 % \item д╜дтд╜дт┴к┬Є╗шдЄ╕║дщд╣д┘днд└д├д┐д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бд╩г┐Їд╬▓─╟╜└ндмдвдыдтд╬д╦д─ддд╞д╬д▀┴к┬Є╗шдЄ╔╜╝ид╣дыд│д╚д╟▓■┴▒дЄ┐▐д├д┐бе
-% \item ележеєе╗ещб╝д╬г▒╚п╕└д╬╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дЄбвепещедеиеєе╚д╬г▒╚п╕└д╬╩м╬╠д╦▒■д╕д╞ележеєе╗ещб╝д╬╚п╕└дЄ╔╜╕╜д╣ды╜─╦└╞▒╗╬д╬┤╓│╓дЄ╩╤дид┐бгд│джд╣дыд│д╚д╦дшд├д╞бвд╔д╬╝┴╠фд╬двд╚д╦┤╡╝╘дмд┐дпд╡дєд╬▓ё╧├╬╠дЄ╚пд╖д┐длдмдядлдыдшджд╦д╩д├д┐бе
-% \item ╕лдфд╣д╡д╬┤╤┼└длдщбвеще╕еке▄е┐еєд╦дшд├д╞╚п╕└д╬╩м╬рдЄ┴к┬Єд╣ды╔Ї╩мд╚бв╜─╦└дЄе▐еже╣екб╝е╨б╝д╖д┐║▌д╦╝┬║▌д╬╩╕дм╔╜╝ид╡дьды╔Ї╩мдЄбв└╤д▀╜┼д═└▐дь└■е░еще╒д╬▓╝┬жд╦бв▓гд╦╩┬д┘д╞╔╜╝ид╣дыдшджд╦д╖д┐бг
+% \item ележеєе╗ещб╝д╬г▒╚п╕└д╬╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дЄбдепещедеиеєе╚д╬г▒╚п╕└д╬╩м╬╠д╦▒■д╕д╞ележеєе╗ещб╝д╬╚п╕└дЄ╔╜╕╜д╣ды╜─╦└╞▒╗╬д╬┤╓│╓дЄ╩╤дид┐бед│джд╣дыд│д╚д╦дшд├д╞бдд╔д╬╝┴╠фд╬двд╚д╦епещедеиеєе╚дмд┐дпд╡дєд╬▓ё╧├╬╠дЄ╚пд╖д┐длдмдядлдыдшджд╦д╩д├д┐бе
+% \item ╕лдфд╣д╡д╬┤╤┼└длдщбдеще╕еке▄е┐еєд╦дшд├д╞╚п╕└д╬╩м╬рдЄ┴к┬Єд╣ды╔Ї╩мд╚бд╜─╦└дЄе▐еже╣екб╝е╨б╝д╖д┐║▌д╦╝┬║▌д╬╩╕дм╔╜╝ид╡дьды╔Ї╩мдЄбд└╤д▀╜┼д═└▐дь└■е░еще╒д╬▓╝┬жд╦бд▓гд╦╩┬д┘д╞╔╜╝ид╣дыдшджд╦д╖д┐бе
 %\end{itemize}
 
 
 
 %\subsection{╖ы▓╠}
 
-%─є░╞е╖е╣е╞ер3дЄележеєе╗ещб╝1╠╛д╦╗╚д├д╞ддд┐д└днбв░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бг
+%─є░╞е╖е╣е╞ер3дЄележеєе╗ещб╝1╠╛д╦╗╚д├д╞ддд┐д└днбд░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бе
 %\begin{itemize}
-% \item б╓╝┴╠ф╖┴╝░дм▓Є╝сбв╠╡┬╠╧├ д╬г▓╝я╬рд╖длд╩ддд┐дсбв┼м└┌д╩╩м╬рдмд╟днд▐д╗дєд╟д╖д┐бг
+% \item б╓╝┴╠ф╖┴╝░дм▓Є╝сбд╠╡┬╠╧├ д╬г▓╝я╬рд╖длд╩ддд┐дсбд┼м└┌д╩╩м╬рдмд╟днд▐д╗дєд╟д╖д┐бе
  
-%╩─д╕дщдьд┐╝┴╠фд╧бв╦▄═ше╗еще╘е╣е╚┬жд╬▓Є╝сдЄ│╬╟зд╣дыд┐дсд╬╝┴╠фд╟д╣бгд╖дл
-%д╖бв╝┴╠ф╖┴д╚д╖д╞д╧│лдлдьд┐╝┴╠фд╚┬╨дЄд╩д╖д╞ддд▐д╣д╬д╟бвд│дьд╧д│дьд╟дкддд╞
-%дкднбв╝┴╠ф╖┴╝░д╟д╧д╩дд▓Є╝сдЄб╓▓Є╝сб╫д╦╩м╬рд╣дыд╬дм┬┼┼Ўд╚╣═дид▐д╣бгдшд├д╞бв
-%╩м╬рд╧бвб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫б╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╦
-%╩мд▒д╞ддд┐д└дпд╚ддддд╟д╣д═бгб╫
+%╩─д╕дщдьд┐╝┴╠фд╧бд╦▄═шележеєе╗ещб╝┬жд╬▓Є╝сдЄ│╬╟зд╣дыд┐дсд╬╝┴╠фд╟д╣бед╖дл
+%д╖бд╝┴╠ф╖┴д╚д╖д╞д╧│лдлдьд┐╝┴╠фд╚┬╨дЄд╩д╖д╞ддд▐д╣д╬д╟бдд│дьд╧д│дьд╟дкддд╞
+%дкднбд╝┴╠ф╖┴╝░д╟д╧д╩дд▓Є╝сдЄб╓▓Є╝сб╫д╦╩м╬рд╣дыд╬дм┬┼┼Ўд╚╣═дид▐д╣бедшд├д╞бд
+%╩м╬рд╧бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫б╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╦
+%╩мд▒д╞ддд┐д└дпд╚ддддд╟д╣д═беб╫
 %\end{itemize}
-бб
+
 
 %\subsection{▓▌┬ъ}
 
@@ -283,14 +283,14 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 \section{ележеєе╗ещб╝длдщд╬е╒егб╝е╔е╨е├епдкдшд╙═╫╖я├ъ╜╨}
 
-%бб╚п╧├╬╠д╬└▐дь└■е░еще╒д╬┐з╩мд▒д╦д─ддд╞д╧бдд╜д╬┐═д╬┤╪┐┤дм╕■ддд╞ддды╧├┬ъд╦дшд├д╞╩мд▒дщдьдыд╬д╟бд╩м╬р╩¤╦бд╬╣й╔╫дм╔м═╫д└д╚╣═дидщдьдыбе
-%ббд▐д┐╝┬║▌д╦д╧бд╧├д╖д╞ддды├цд╟┤╪┐┤дмд╔дєд╔дє╚Їдєд╟дддп┐═дм┬┐ддд┐дсбдд╔джд╖д╞дддпдл
-%ббддд║дьд╦д╖д╞дтбде╗еще╘е╣е╚д╬╚п╧├д╦д─ддд╞д╧бд╜╜╩мд╚дщдидщдьдыд╚╗╫ддд▐д╣бе╝┴╠ф╖┴╝░б╩│лдлдьд┐бд╩─д╕дщдьд┐б╦д╚▓Є╝сд╚бд┴ъ─╚бжд╜д╬┬╛д╚╠╡┬╠╧├д╦╩мд▒дыбе╠╡┬╠╧├д╚┴ъ─╚д╧╞▒еье┘еыд╟д╧д╩дпбдележеєе╗еъеєе░д╦╔м═╫длд╔дждлд╬╜┼д▀дм░уджд╬д╟бд╩мд▒д┐╩¤дмдшддд╚╣═дидщдьдыбе
+%╚п╧├╬╠д╬└▐дь└■е░еще╒д╬┐з╩мд▒д╦д─ддд╞д╧бдд╜д╬┐═д╬┤╪┐┤дм╕■ддд╞ддды╧├┬ъд╦дшд├д╞╩мд▒дщдьдыд╬д╟бд╩м╬р╩¤╦бд╬╣й╔╫дм╔м═╫д└д╚╣═дидщдьдыбе
+%д▐д┐╝┬║▌д╦д╧бд╧├д╖д╞ддды├цд╟┤╪┐┤дмд╔дєд╔дє╚Їдєд╟дддп┐═дм┬┐ддд┐дсбдд╔джд╖д╞дддпдл
+%ддд║дьд╦д╖д╞дтбдележеєе╗ещб╝д╬╚п╧├д╦д─ддд╞д╧бд╜╜╩мд╚дщдидщдьдыд╚╗╫ддд▐д╣бе╝┴╠ф╖┴╝░б╩│лдлдьд┐бд╩─д╕дщдьд┐б╦д╚▓Є╝сд╚бд┴ъ─╚бжд╜д╬┬╛д╚╠╡┬╠╧├д╦╩мд▒дыбе╠╡┬╠╧├д╚┴ъ─╚д╧╞▒еье┘еыд╟д╧д╩дпбдележеєе╗еъеєе░д╦╔м═╫длд╔дждлд╬╜┼д▀дм░уджд╬д╟бд╩мд▒д┐╩¤дмдшддд╚╣═дидщдьдыбе
 
 
 %\subsection{┴┤д╞д╬┴к┬Є╗шдЄ╜ч╚╓д╦╔╜╝и}
 %┴к┬Є╗шдЄд╣д┘д╞╔╜╝ид╖д╞д█д╖дд
-%епещедеиеєе╚д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєд╚ележеєе╗ещб╝д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєдЄдяд▒д╞╔╜╝ид╖д╞ддд┐дмбвд│дьдЄ╝┬║▌д╬▓ё╧├╜чд╦─╛д╖д╞╔╜╝ид╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бг
+%епещедеиеєе╚д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєд╚ележеєе╗ещб╝д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєдЄдяд▒д╞╔╜╝ид╖д╞ддд┐дмбдд│дьдЄ╝┬║▌д╬▓ё╧├╜чд╦─╛д╖д╞╔╜╝ид╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
 %\subsection{е╒ейеєе╚е╡еде║д╬╕■╛х}
@@ -303,20 +303,20 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 %\subsection{╩╕д╬╢ш└┌дь╠▄}
-%╬удид╨б╓д█дєд╚д╦бв─лдт├ыдт╕л─едщдьд╞д╩ддд├д╞ддд├д┐дщ╩╤д╩╕└дд╩¤д╟д╣д▒д╔бв┐йд┘д┐
-%ддд╚днд╦┐йд┘дьды╛ї╢╖д├д╞ддджд╬дмд╣д┤дп╡╫д╖д╓дъд╟бвд╩дєдл╝л╩мд╟дтд╔джд╩дє
-%длд╩д├д╞ддджд╬дмдвд├д┐дєд╟д╣д▒д╔бв░╒│░д╚╔с─╠д╦д╟днд┐д▀д┐ддд╩б╩╛╨б╦д╜дьд╧
-%бвдвдъд▐д╣д═бжбжбжд╩дєдл▓╚┬▓дмддд┐дщ┐йд┘д╩дндуддд▒д╩длд├д┐дъд╚длд╣дыд╖б╫д╚дддж╩╕д╦┬╨д╖д╞бвб╓бжбжбжб╫дшдъ┴░д╬╔Ї╩мд╧б╓▓╚┬▓б╫б╓╕Є═зб╫б╓╗┼╗Ўб╫д╬д╔д╬╩м╬рд╦дт┬░д╡д║бвб╓бжбжбжб╫дшдъ╕хд╬╔Ї╩мд╧б╓▓╚┬▓б╫д╦┬░д╣дыдмбве╫еэе╚е┐еде╫е╨б╝е╕ечеєд╦дкддд╞д╧б╓бжбжбжб╫дЄб╓бгб╫д╬дшджд╩1╩╕1╩╕д╬╢ш└┌дь╠▄д╦└▀─ъд╖д╞д╩ддд╬д╟бв╢ш╩╠д╖д┐╚╜─ъ╩╤╣╣дм─є░╞е╖е╣е╞ерецб╝е╢б╝┬жд╟д╟днд╩ддбг
+%╬удид╨б╓д█дєд╚д╦бд─лдт├ыдт╕л─едщдьд╞д╩ддд├д╞ддд├д┐дщ╩╤д╩╕└дд╩¤д╟д╣д▒д╔бд┐йд┘д┐
+%ддд╚днд╦┐йд┘дьды╛ї╢╖д├д╞ддджд╬дмд╣д┤дп╡╫д╖д╓дъд╟бдд╩дєдл╝л╩мд╟дтд╔джд╩дє
+%длд╩д├д╞ддджд╬дмдвд├д┐дєд╟д╣д▒д╔бд░╒│░д╚╔с─╠д╦д╟днд┐д▀д┐ддд╩б╩╛╨б╦д╜дьд╧
+%бддвдъд▐д╣д═бжбжбжд╩дєдл▓╚┬▓дмддд┐дщ┐йд┘д╩дндуддд▒д╩длд├д┐дъд╚длд╣дыд╖б╫д╚дддж╩╕д╦┬╨д╖д╞бдб╓бжбжбжб╫дшдъ┴░д╬╔Ї╩мд╧б╓▓╚┬▓б╫б╓╕Є═зб╫б╓╗┼╗Ўб╫д╬д╔д╬╩м╬рд╦дт┬░д╡д║бдб╓бжбжбжб╫дшдъ╕хд╬╔Ї╩мд╧б╓▓╚┬▓б╫д╦┬░д╣дыдмбде╫еэе╚е┐еде╫е╨б╝е╕ечеєд╦дкддд╞д╧б╓бжбжбжб╫дЄб╓беб╫д╬дшджд╩1╩╕1╩╕д╬╢ш└┌дь╠▄д╦└▀─ъд╖д╞д╩ддд╬д╟бд╢ш╩╠д╖д┐╚╜─ъ╩╤╣╣дм─є░╞е╖е╣е╞ерецб╝е╢б╝┬жд╟д╟днд╩ддбе
 
 %б╓бжбжбжб╫дЄ
 
 
 
-2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бв12╠╛д╬└ь╠ч▓╚д╦╦▄е╖е╣е╞ердЄ╕лд╞ддд┐д└днбв░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бг
+2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бд12╠╛д╬└ь╠ч▓╚д╦╦▄е╖е╣е╞ердЄ╕лд╞ддд┐д└днбд░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бе
 
 \begin{itemize}
-\item епещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбвележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддбе
-\item ╕╢╩╕длдщбде╗еще╘е╣е╚длдщ┤╡╝╘д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бд┤╡╝╘д╬╚п╕└дЄджд╩дмд╖д╞┤╡╝╘╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
+\item епещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддбе
+\item ╕╢╩╕длдщбдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бдепещедеиеєе╚д╬╚п╕└дЄджд╩дмд╖д╞епещедеиеєе╚╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
 \item 
 \end{itemize}
 
@@ -330,37 +330,37 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 \item д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд
 \item еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
 \end{itemize}
-д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бвележеєе╗ещб╝длдщ┤╡╝╘д╪д╬╝┴╠фдЄ╝ид╣╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╦дшд├д╞бв╝■╩╒д╬╚п╕└дЄ╔╜╝ид╣ды╡б╟╜дЄ─╔▓├д╣дыд│д╚д╟▓Є╖шдЄ┐▐д├д┐бг
-ббббббеще╕еке▄е┐еєд╚д▐д╚дсд╞бве░еще╒дшдъ▓╝┬жд╦
-бббббб╩╕╛╧╔╜╝ид╡дьдыдшджд╦еьедевеже╚╩╤╣╣
+д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠фдЄ╝ид╣╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╦дшд├д╞бд╝■╩╒д╬╚п╕└дЄ╔╜╝ид╣ды╡б╟╜дЄ─╔▓├д╣дыд│д╚д╟▓Є╖шдЄ┐▐д├д┐бе
+еще╕еке▄е┐еєд╚д▐д╚дсд╞бде░еще╒дшдъ▓╝┬жд╦
+╩╕╛╧╔╜╝ид╡дьдыдшджд╦еьедевеже╚╩╤╣╣
 
 
 \subsection{едеєе┐ещепе╞еге╓└н}
 едеєе┐ещепе╞еге╓└ндмд╩ддбе╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддбе
 
 \subsection{еще╕еке▄е┐еє╔╜╝ид▐д╟д╬╔м═╫╗■┤╓}
-еэб╝елеыд╟д╬╞░║юд╦дкддд╞бвеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбвд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бг
+еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
 
 \subsection{епещедеиеєе╚д╬╚п╕└д╬╩м╬р├▒░╠}
-┤╡╝╘д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бг
+епещедеиеєе╚д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 \subsection{ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠}
-ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бвб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбвб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бг
+ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
 \subsection{╩м╬╠д╦▒■д╕д┐╜─╦└д╬┬└д╡дф┤╓│╓}
 
-╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бг
+╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
 \subsection{╩╕╗·┐зд╬▓■┴▒}
-╩╕╗·┐зд╬▓■┴▒дм╡сдсдщдьд┐бг
+╩╕╗·┐зд╬▓■┴▒дм╡сдсдщдьд┐бе
 
 \subsection{╝┤д╬╔╜╝и}
-└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бв╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бг
+└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
 
 \subsection{╩╕╗·дм╛од╡дд}
-╩╕╗·дм╛од╡ддбг
+╩╕╗·дм╛од╡ддбе
 
 \subsection{╝┤д╬╔╜╝и}
-е╫еэе╚е┐еде╫д╟д╧бв┤╡╝╘д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бгд╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└дддвбг
+е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└дддвбе
