--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,6 +1,6 @@
-前章では提案システムのプロトタイプの開発、およびそのプロトタイプに対するユーザーカウンセラーからのレビューをもとにした、提案システム要件抽出について説明した。
+前章では提案システムのプロトタイプの開発，およびそのプロトタイプに対するユーザーカウンセラーからのレビューをもとにした，提案システム要件抽出について説明した．
 
-それを受け、抽出した要件をみたした提案システムの開発を行った。このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す。本章ではその要件をみたした提案システムの概要について説明する。特に、要件を満たすための視覚的表現(Visual Representation, Visual Design)、ユーザーインタラクションなどを重点的に説明する。
+それを受け，抽出した要件をみたした提案システムの開発を行った．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本章ではその要件をみたした提案システムの概要について説明する．特に，要件を満たすための視覚的表現(Visual Representation, Visual Design)，ユーザーインタラクションなどを重点的に説明する．
 
  \begin{figure}
    \begin{center}
@@ -19,37 +19,37 @@
 \item どこがどの発言を表しているかわからない
 \item ラジオボタンが多すぎてグラフが下の方にいく
 \end{itemize}
-という問題に対しては、カウンセラーから患者への質問を示す縦棒をマウスオーバーすることによって、周辺の発言を表示する機能を追加することで解決を図った。
-　　　ラジオボタンとまとめて、グラフより下側に
-　　　文章表示されるようにレイアウト変更
+という問題に対しては，カウンセラーからクライエントへの質問を示す縦棒をマウスオーバーすることによって，周辺の発言を表示する機能を追加することで解決を図った．
+ラジオボタンとまとめて，グラフより下側に
+文章表示されるようにレイアウト変更
 
 
 \section{インタラクティブ性}
-インタラクティブ性がない、積み重ね折れ線グラフが描画された後にラジオボタンを変えてもインタラクティブに積み重ね折れ線グラフが変更されないという問題に対して、描画後にラジオボタンを変えると即時にグラフ描画に変更適用されるように改良を行った。
+インタラクティブ性がない，積み重ね折れ線グラフが描画された後にラジオボタンを変えてもインタラクティブに積み重ね折れ線グラフが変更されないという問題に対して，描画後にラジオボタンを変えると即時にグラフ描画に変更適用されるように改良を行った．
 
 \section{ラジオボタン表示までの必要時間}
-ローカルでの動作において、ラジオボタン表示に約10秒必要であり、その経過時間が問題視されていた。それを受け、今回はプログラム上の無駄な記述を省くことで約5秒に短縮した。
+ローカルでの動作において，ラジオボタン表示に約10秒必要であり，その経過時間が問題視されていた．それを受け，今回はプログラム上の無駄な記述を省くことで約5秒に短縮した．
 
 \section{クライエントの発言の分類単位}
-患者の発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類するように変更した。
+クライエントの発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類するように変更した．
 
 \section{カウンセラーの発言の分類単位}
-カウンセラーの発言について、「開かれた質問」「閉じられた質問」だけでなく、「解釈」「相づち」「世間話」という分類を追加してほしいというレビューをいただいたので、追加を行った。
+カウンセラーの発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相づち」「世間話」という分類を追加してほしいというレビューをいただいたので，追加を行った．
 
-ここで、積み重ね折れ線グラフの初期描画の際の分類行程について説明する。この行程について簡単に説明した図を、図5.1に示す。まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する。次に残りの発言のうち、単語数が５個以下のものを「相づち」に分類する。さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する。今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが、終助詞の「ね」を含むものを「解釈」、含まないものを「世間話」とした。
+ここで，積み重ね折れ線グラフの初期描画の際の分類行程について説明する．この行程について簡単に説明した図を，図5.1に示す．まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相づち」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
 
 \section{分量に応じた縦棒の太さや間隔}
 
-分量に応じて縦棒の太さや間隔を変えることを提案した。
+分量に応じて縦棒の太さや間隔を変えることを提案した．
 
 
 \section{文字色の改善}
-文字色の改善が求められていたが、文字色黒い文字を色のついた墨つきかっこ【】で囲うようにした。
+文字色の改善が求められていたが，文字色黒い文字を色のついた墨つきかっこ【】で囲うようにした．
 
 \section{軸の表示}
-積み重ね折れ線グラフにおいて、軸を表示するようにした。
+積み重ね折れ線グラフにおいて，軸を表示するようにした．
 
-文字が小さい→変更
+
 
 \section{軸の表示}
-プロトタイプでは、患者の発言に関する選択肢がすべて表示された後にカウンセラーに関する発言が表示されるようになっていた。しかしそれではわかりづらいというレビューをもとに、元のテキストデータ通りの順番に並ぶように変更した。
+プロトタイプでは，クライエントの発言に関する選択肢がすべて表示された後にカウンセラーに関する発言が表示されるようになっていた．しかしそれではわかりづらいというレビューをもとに，元のテキストデータ通りの順番に並ぶように変更した．
