add future works

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -14,7 +14,7 @@
 
 ただし現状では，クライエントとビギナーのカウンセラーとのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，ベテランのカウンセラーらが目で読んで，議論をする，という流れであり，全体を読んで各々カウンセリング内容を分析するのに時間がかかる．
 
-そこで，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライアントとカウンセラーの会話を可視化するWebシステムを開発した．このシステムによって，どのような質問をカウンセラーがクライエントに投げかけるかによって，いかにクライエントの「対人関係上の問題」が引き出されたかがすぐにわかることが期待される．
+そこで，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライアントとビギナーのカウンセラーとの会話を可視化するWebシステムを開発した．このシステムによって，どのような質問をカウンセラーがクライエントに投げかけるかによって，いかにクライエントの「対人関係上の問題」が引き出されたかが，ベテランのカウンセラーにとってすぐにわかることが期待される．
 
 カウンセラーの質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている．これに対し，クライエントが5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く，クライエントが何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
 
