--- a/chapter5.tex
+++ b/chapter5.tex
@@ -19,9 +19,8 @@
 \item どこがどの発言を表しているかわからない
 \item ラジオボタンが多すぎてグラフが下の方にいく
 \end{itemize}
-という問題に対しては，カウンセラーからクライエントへの質問を示す縦棒をマウスオーバーすることによって，周辺の発言を表示する機能を追加することで解決を図った．
-ラジオボタンとまとめて，グラフより下側に
-文章表示されるようにレイアウト変更
+という問題に対しては，まずカウンセラーからクライエントへの質問を示す縦棒をマウスオーバーすることによって，周辺の発言を表示する機能を追加することで解決を図った．
+またカウンセラーやクライエントの発言に関するグループ分類を手動訂正するラジオボタンのエリアとまとめて，グラフより下側に文章表示されるようにレイアウト変更を行った．
 
 
 \section{インタラクティブ性}
@@ -31,7 +30,7 @@
 ローカルでの動作において，ラジオボタン表示に約10秒必要であり，その経過時間が問題視されていた．それを受け，今回はプログラム上の無駄な記述を省くことで約5秒に短縮した．
 
 \section{クライエントの発言の分類単位}
-クライエントの発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類するように変更した．
+クライエントの発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類するように変更を行った．
 
 \section{カウンセラーの発言の分類単位}
 カウンセラーの発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相づち」「世間話」という分類を追加してほしいというレビューをいただいたので，追加を行った．
@@ -47,9 +46,11 @@
 文字色の改善が求められていたが，文字色黒い文字を色のついた墨つきかっこ【】で囲うようにした．
 
 \section{軸の表示}
-積み重ね折れ線グラフにおいて，軸を表示するようにした．
+積み重ね折れ線グラフにおいて，軸を表示するようにした．横軸の単位は入力したテキストデータの中でのクライエントの全ての発言の全ての文字数，縦軸の単位はクライエントの各発言の中で「愛」「交友」「仕事」のどのグループに分類される文の数が何文あるかである．
 
 
 
-\section{軸の表示}
+\section{ラジオボタンの表示}
 プロトタイプでは，クライエントの発言に関する選択肢がすべて表示された後にカウンセラーに関する発言が表示されるようになっていた．しかしそれではわかりづらいというレビューをもとに，元のテキストデータ通りの順番に並ぶように変更した．
+
+また，全ての文においてあらかじめ選択肢のラジオボタンが表示されていると非常に見づらいので，複数の選択肢の可能性があるとシステムで判断したものについてのみあらかじめ選択肢のラジオボタンを表示し，それ以外に関してはラジオボタンエリア内のその該当箇所の文章をクリックすることで折りたたまれていた選択肢ラジオボタンがすぐ下に表示されるようにした．
