--- a/chapter6.tex
+++ b/chapter6.tex
@@ -6,8 +6,10 @@
 しているところです．」
 とコメントをいただいている．
 
+またプロトタイプから前章の提案システムへの変更についても概ね好評価をいただいている．
 
-本システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存ないし出力する機能が求められている．
+
+本システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存ないし出力する機能が求められている．こレに関しては，
 
 「長い文章ですので，その日
 だけの使用では終わらないことが多いため」
@@ -22,9 +24,11 @@
 ただく方がいいかもしれません．症状に囚われているクライエントは，自己の課題が大半
 になるといえます．」
 
-文字の大きさに関して「」
 
-本提案システム全体の配色面に関して「文字の色ですが，黄色と灰色は，バックの白とかぶって見えにくくなっ
+
+また，本提案システム全体の配色面に関して「文字の色ですが，黄色と灰色は，バックの白とかぶって見えにくくなっ
 ていると思います．私のモニターのブルーライトカットの影響かもしれませんが，
 特に黄色は見えませんでした．よって，色を変えていただけると助かります．」「青色の【】は黒字と判別
 がつきにくくなりました．」などのコメントをいただいている．
+
+
