まだやってないこと： p.12 : 全体的に理由がないので付与した方がいいと思う p.18 15: なのか　という終わり方は微妙かな。「検証する必要がある。」と書くといいかも p.25 5.1: 横表示にして見やすいようにしてみたら？

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -41,13 +41,13 @@ KH Coderのデメリットとして，
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-原田ら\cite{voistep}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで可視化したが，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかを可視化するにはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリング書き起こしテキストデータにおいては発話の重なりが分からない．
+原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで可視化したが，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかを可視化するにはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリング書き起こしテキストデータにおいては発話の重なりが分からない．
 
 庄ら\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いてクライエントの話題をした．しかし，ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容をクライエントの発言内容と同時に可視化しなければならない．
 
 
-Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．パターンを調査することに興味があるユーザーにとって，異なるイベントか時点が2つのモデルで違ってハイライトされるかどうかについて見ることが，重要である場合がある．
-この終了までに，モデル全体で時間とともに傾向を比較するために，我々は非対称の話題フロー図を作成した．
+Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．パターンを調査することに興味があるユーザーにとって，異なるイベントの時刻が2つのモデルで違ってハイライトされるかどうかについて見ることが重要になるケースがあるとしている．
+この終了までに，モデル全体で時間とともに傾向を比較するために，Ericらは非対称の話題フロー図を作成した．
 
 %軸より上に現れている1つのモデルの話題と下記のように見えている他のモデルの話題で，2つのモデルからの話題密度は，横時間軸に沿って計画される．
 
