--- a/chapter3.tex
+++ b/chapter3.tex
@@ -5,7 +5,7 @@
 療法の先駆け的存在として存在しているとされる．行っていることは認知の修正で，同じようなアプローチがとられている．
 
 
-アドラー心理学は，オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し，その後継者たちが発展させた心理学の理論，思想と治療技法の体系である\cite{ad}．17世紀にルネ・デカルトが端を発して以来，1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された．ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず，人間の行動や発話の総体――をその主題とする，自然科学の一部門」と述べて以来，アメリカで行動主義が心理学の有力手法となった一方で，実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった．フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは，後にフロイトの考えに異を唱えた．%カール・ユングが唱えたのは，人間誰しも，個人的経験には一切基づいていないあるはっきりと分離された無意識の部分，すなわち「集合的無意識」が存在し，「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった．
+アドラー心理学は，オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し，その後継者たちが発展させた心理学の理論，思想と治療技法の体系である\cite{zokad}．17世紀にルネ・デカルトが端を発して以来，1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された．ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず，人間の行動や発話の総体――をその主題とする，自然科学の一部門」と述べて以来，アメリカで行動主義が心理学の有力手法となった一方で，実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった．フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは，後にフロイトの考えに異を唱えた．%カール・ユングが唱えたのは，人間誰しも，個人的経験には一切基づいていないあるはっきりと分離された無意識の部分，すなわち「集合的無意識」が存在し，「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった．
 
 %一方，アドラーが初めて示唆したのは，個人の心理は現時点における意識的諸力にも影響されるが，社会的領域や環境の影響も同様に見逃せないということであった．
 
@@ -88,11 +88,11 @@
 
 %%カウンセラーの質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている．これに対し，クライエントが5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く，クライエントが何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
 
-%クライアントの会話としては，内容がどの課題領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，カウンセラーの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
+%クライエントの会話としては，内容がどの課題領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，カウンセラーの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
 
 %クライエントからの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考えられる．タイムラインで見ると，最初にクライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で異なった領域に話題が展開した，というような分析も可能になると考えられる．
 %クライエントの関心に関心を向けるというのがカウンセリングの基本ですので，このようにカウンセラーの関心でクライエントを誘導してしまうことはよろしくありませんので，そのためのチェックが可能になるものと考える．
 
 %もうひとつの課題として，ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので，ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
 
-以上のことをもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライアントとカウンセラーの会話を可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした，提案システムに対する要件の抽出のについて説明する．
+以上のことをもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした，提案システムに対する要件の抽出のについて説明する．
