--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,10 +1,10 @@
-╦▄╛╧д╟д╧бд╦▄╕ж╡цд╟─є░╞д╣дые╙е╕ехевеы╩м└╧е╖е╣е╞ерд╟═╤ддды╖╫╗╗бд╡╗╜╤д╦д─ддд╞╜╥д┘дыбе
+╦▄╛╧д╟д╧бд╦▄╕ж╡цд╟─є░╞д╣дые╙е╕ехевеы╩м└╧е╖е╣е╞ерд╟═╤дддыевеые┤еъе║ербд╡╗╜╤д╦д─ддд╞╜╥д┘дыбе
 
 
 \section{╞■╬╧е╟б╝е┐д╬┴░╜ш═¤}
 
 
-д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе╕х╜╥д╣ды┴┤д╞д╬╝┬╕│д╦дкддд╞бд┬╨╛▌е╟б╝е┐д╧╢ж─╠д╖д╞░╩▓╝д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бе
+д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды╞■╬╧е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе╕х╜╥д╣ды┴┤д╞д╬╝┬╕│д╦дкддд╞бд╞■╬╧е╟б╝е┐д╧╢ж─╠д╖д╞╕х╜╥д╣ды┴┤16╕─д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бе
 
 ╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д╧б╓┐┤╬┼╞т▓╩д╦дкд▒ды└▌┐й╛у│▓└ь╠чешб╝ем╬┼╦бе░еыб╝е╫б╫д╬б╓ешб╝ем╬┼╦б╗Ў╬у╕б╞д▓ёб╫╗ё╬┴\cite{txt1}\cite{txt2}\cite{txt3}\cite{txt4}\cite{txt5}дЄ╗╚═╤д╖д┐бе
 
@@ -43,7 +43,7 @@
 \end{itemize}
 д╬╖╫15╕─д╬е╞ене╣е╚е╟б╝е┐дЄ═╤░╒д╖д┐бе
 
-д╡дщд╦бдд│д╬─є░╞е╖е╣е╞ерд╬═н═╤└ндЄ╝ид╣д┐дсд╦╠╧╡╝е╟б╝е┐дЄ1╕─═╤░╒д╖д┐бе
+д╡дщд╦д│д╬─є░╞е╖е╣е╞ерд╦дкддд╞бд╕х╜╥д╣ды╜щ┤№е░еще╒╔┴▓шдмдвды─°┼┘═н═╤д╩дтд╬длдЄ╝ид╣д┐дсд╦╠╧╡╝е╟б╝е┐дЄ1╕─═╤░╒д╖д┐бе
 
 ░╩╛хбд16╕─д╬ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄд╜дьд╛дьjsonе╒ебедеыд╦╩╤┤╣д╖д┐бе[\{"a":"(╦▄╩╕)"\}]д╬╖┴╝░д╟║ю└од╖д┐бе
 
@@ -314,13 +314,11 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бд12╠╛д╬└ь╠ч▓╚д╦╦▄е╖е╣е╞ердЄ╕лд╞ддд┐д└днбд░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бе
 
-\begin{itemize}
-\item епещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддбе
-\item ╕╢╩╕длдщбдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бдепещедеиеєе╚д╬╚п╕└дЄджд╩дмд╖д╞епещедеиеєе╚╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
-\end{itemize}
-
 
 \subsection{╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╟╝■╩╒д╬╚п╕└дЄ╔╜╝и}
+
+
+
 
 
 
@@ -329,9 +327,9 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 \item д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд
 \item еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
 \end{itemize}
-д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠фдЄ╝ид╣╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╦дшд├д╞бд╝■╩╒д╬╚п╕└дЄ╔╜╝ид╣ды╡б╟╜дЄ─╔▓├д╣дыд│д╚д╟▓Є╖шдЄ┐▐д├д┐бе
-еще╕еке▄е┐еєд╚д▐д╚дсд╞бде░еще╒дшдъ▓╝┬жд╦
-╩╕╛╧╔╜╝ид╡дьдыдшджд╦еьедевеже╚╩╤╣╣
+д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠фдЄ╝ид╣╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╦дшд├д╞бд╝■╩╒д╬╚п╕└дЄ╔╜╝ид╣ды╡б╟╜дЄ─╔▓├д╣дыд│д╚д╟▓Є╖шдЄ┐▐дыд┘днд╟двдыбе
+
+
 
 
 \subsection{едеєе┐ещепе╞еге╓└н}
@@ -341,14 +339,34 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
 
 \subsection{епещедеиеєе╚д╬╚п╕└д╬╩м╬р├▒░╠}
-епещедеиеєе╚д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
+
+епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд░╩▓╝д╬еье╙ехб╝дЄддд┐д└ддд┐бе
+
+б╓б╪╗┼╗Ўб┘д╚дддж├▒╕ьдм╜╨д╞днд╞дтбд
+░жд╬▓▌┬ъд╚д╖д╞д╬╔╫д╦д─ддд╞д╬д╧д╩д╖дЄд╖д╞дддыд╚днд╧бдд╜д╬е╖е┴ехеиб╝е╖ечеє
+д╟д╧░жд╬▓▌┬ъд╚д╩дъд▐д╣бе╞░╗ьбд╖┴═╞╗ьдт╞▒д╕дпбдд╔д╬▓▌┬ъд╬е╖е┴ехеиб╝е╖ечеє
+д╬├цд╟╗╚═╤д╡дьд╞дддыдлд╟╖шд▐дъд▐д╣д╬д╟бдд│д╬╩м╬р╩¤╦бд╧╔╘┼м┼Ўд╚дддид▐д╣бе
+
+дшд├д╞бд╧├┬ъдмд│д╬г│д─д╬▓▌┬ъд╬д╔дьд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рд╟д╖длд╟дн
+д╩ддд╚╣═дид▐д╣бед─д▐дъбдг▒╩╕дмд╔д╬▓▌┬ъд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рд╩дщд╨дя
+длдъд▐д╣бе
+
+д┐д╚дид╨бдб╪джд┴д╬╔╫д╧╗┼╗Ўд╦дддпд╬дЄ╖∙дмд├д╞бд╦ш─л╡пднд╞д│д╩дддєд╟д╣бе
+д╜дьдЄ╕лд╞дддыд└д▒д╟╩вдм╬йд─дєд╟д╣бе╝л╩мд╬╞▒╬╜дм╞▒д╕дшджд╦╗┼╗Ўд╦╣╘днд┐дм
+дщд╩дпд╞─л╡пднд╩длд├д┐д╚дддж╧├дЄ╩╣ддд╞дтбдд╡д█д╔╩вд╧╬йд┴д▐д╗дєдмбд╔╫дмд╜
+джд╩дыд╬д╧└ф┬╨д╦╡Ўд╗д╩ддбкбкб┘д╚дддждшджд╩╩╕╛╧д╟д╣бе║╟╜щд╬╩╕д╧░жд╬▓▌┬ъбд
+┬шг▓╩╕д╧╗┼╗Ўд╬▓▌┬ъбд╔╫дмд╜джд╩дыд╬д╧└ф┬╨╡Ўд╗д╩ддбкбкд╧░жд╬▓▌┬ъд╟д╣б╫
+
+░╩╛хдлдщбд├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╣дыд│д╚дм╡сдсдщдьдыбе
 
 \subsection{ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠}
-ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
+д▐д║бдепещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
+
+д▐д┐бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
 \subsection{╩м╬╠д╦▒■д╕д┐╜─╦└д╬┬└д╡дф┤╓│╓}
-
+╕╢╩╕длдщбдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бдепещедеиеєе╚д╬╚п╕└дЄджд╩дмд╖д╞епещедеиеєе╚╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
 ╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
@@ -362,4 +380,4 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 ╩╕╗·дм╛од╡ддбе
 
 \subsection{╝┤д╬╔╜╝и}
-е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└дддвбе
+е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
