--- a/chapter8.tex
+++ b/chapter8.tex
@@ -1,10 +1,9 @@
 \section{結論}
 
-本研究では，タイムライン形式の時間軸に沿った可視化によって，クライアントとカウンセラーの会話を可視化するWebシステムを開発した．このシステムによって，どのような質問をカウンセラーがクライエントに投げかけるかによって，クライエントがどれだけの分量の回答を行ったか，またどのような「対人関係上の問題」が引き出されたかがすぐにわかるようになった．
+本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化するWebシステムを開発した．このシステムをベテランのカウンセラーが使用することによって実現したことは，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどれだけの分量の回答を行ったか，またどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになったことである．
 
 
-本提案システムのユーザーとして想定しているベテランのカウンセラーからは「この研究が進んでいくことによって，心理臨
-床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になって
+本提案システムのユーザーとして想定しているベテランのカウンセラーからは「この研究が進んでいくことによって，心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になって
 いけることを願っております．こういう着想はありませんでしたので，大変期待
 しているところです」
 という本研究への評価をいただいている．
