--- a/main.bib
+++ b/main.bib
@@ -111,7 +111,7 @@
 
 
 @ARTICLE{voistrap,
-	author = "原田 陽雄, 米山 博人, 下谷 啓, 藤居 徹, 西野 洋平, 飯田 靖",
+	author = "原田 陽雄, 米山 博人, 下谷 啓 ほか",
 	title = "コミュニケーション可視化技術「Voistrap®」",
 	journal = "富士ゼロックス テクニカルレポート",
 	year = 2013,
@@ -119,10 +119,3 @@
         pages = "86-95"
 }
 
-
-
-%@article{2014web,
-%  title={Web カウンセリングシステムの開発および心理データの可視化},
-%  author={庄,?亮 and others},
-%  year={2014}
-%}
