chapter4 from vaio

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -338,6 +338,15 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 \subsection{еще╕еке▄е┐еє╔╜╝ид▐д╟д╬╔м═╫╗■┤╓}
 еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
 
+е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бед╜д╬╞т═╞д╧╝бд╦╝ид╣дтд╬д╟двдыбеб╓епещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╕╜дьд╞дддыд╜д╬╛ь╜ъд╟бдепещ
+едеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞╩м╬рд╟дндыдшджд╦д╖д╞ддд┐д└д▒ды
+д╚║о═Ёд╖д╩ддд╟ддддд╬д╟д╣дмбеепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└дм╩м╬ед╡дьд┐
+╛ь╜ъд╟╩м╬рд╖д╞дддпд╚бд╞├д╦ележеєе╗ещб╝д╬╚п╕└дм▓┐д╦╕■д▒д╞длдмдядлдъд╦дпдпбд
+╩м╬рдм╞ёд╖дпд╩дыдшджд╟д╖д┐бе
+б╩епещедеиеєе╚д╬╚п╕└дЄб╦епеъе├епд╖д╞бд╚є╔╜╝идЄ╔╜╝ид╦д╖д┐╛ь╣чбдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞д╧б╩┬и║┬д╦б╦┴к┬Єдм
+д╟днд╩ддд╬д╟бдд╜д╬╛ьд╟┴к┬Єд╟дндыдшджд╦д╖д╞ддд┐д└дп╩¤дм╩╪═°д╟д╧д╩дддлд╚╣═
+дид▐д╣б╫
+
 \subsection{епещедеиеєе╚д╬╚п╕└д╬╩м╬р├▒░╠}
 
 епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд░╩▓╝д╬еье╙ехб╝дЄддд┐д└ддд┐бе
@@ -371,13 +380,17 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 \subsection{╩╕╗·┐зд╬▓■┴▒}
-╩╕╗·┐зд╬▓■┴▒дм╡сдсдщдьд┐бе
+╩╕╗·┐зд╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐бе
+б╓╩╕╗·д╬┐зд╟д╣дмбд▓л┐зд╚│е┐зд╧бде╨е├епд╬╟Єд╚длд╓д├д╞╕лдид╦дпдпд╩д├
+д╞дддыд╚╗╫ддд▐д╣бе╗фд╬ете╦е┐б╝д╬е╓еыб╝ещеде╚еле├е╚д╬▒╞╢┴длдтд╖дьд▐д╗дєдмбд
+╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫
 
 \subsection{╝┤д╬╔╜╝и}
-└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
+└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╜─╝┤▓г╝┤дм▓┐дЄ╔╜д╖д╞дыдлдядлдщд╩ддд╬д╟бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
 
 \subsection{╩╕╗·дм╛од╡дд}
-╩╕╗·дм╛од╡ддбе
+╩╕╗·д╬┬чднд╡д╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐беб╓ете╦е┐б╝дм╛од╡дд╛ь╣чбдг▒
+╠╠д╟╕лдшджд╚д╣дыд╚е╒ейеєе╚е╡еде║дм╢╦дсд╞╛од╡дпд╩дъбд╧╖┤уд╦д╚д├д╞д╧╚╜╩╠╔╘
+╟╜д╚д╩д├д╞д╖д▐ддд▐д╣бее╒ейеєе╚е╡еде║дЄ╛хд▓дыд│д╚д╧д╟днд▐д╣длбй
+б╫
 
-\subsection{╝┤д╬╔╜╝и}
-е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
