turned fig5.1,  add references of kuromoji.js & attrakdiff

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,9 +1,9 @@
 
 
-心療内科では，心身症やストレスからくる身体症状が取り扱われている．
+心療において，カウンセラーは心身症やストレスからくる身体症状をもつ患者ないしクライエントの治療の一貫としてカウンセリングを行う．
 
 
-臨床心理士資格取得者数は年を経るごとに増加傾向にあるが，ビギナーのカウンセラーは「対人関係上の問題」を，質問に対する回答として患者ないしクライエントから引き出すのに苦戦しているという問題がある．本論文では以降，患者ないしクライエントのことをまとめてクライエントと記述する．
+しかし，ビギナーのカウンセラーは「対人関係上の問題」を，質問に対する回答として患者ないしクライエントから引き出すのに苦戦しているという問題がある．本論文では以降，患者ないしクライエントのことをまとめてクライエントと記述する．
 
 カウンセラーの質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている．これに対し，クライエントが5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く，クライエントが何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
 
@@ -13,7 +13,7 @@
 
 ただし現状では，クライエントとビギナーのカウンセラーとのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，ベテランのカウンセラーらが目で読んで，議論をする，という流れであり，全体を読んでからの各々カウンセリング内容の分析という流れに時間を要する．
 
-そこで，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとビギナーのカウンセラーとの会話を可視化するWebシステムを開発した．本提案システムはベテランのカウンセラーをユーザーとして想定した．このシステムをベテランのカウンセラーが使用することによって期待されることは，ベテランからビギナーへのカウンセリング指導において，ビギナーのカウンセラーがクライエントにどのような質問を投げかけるかによって，ビギナーのカウンセラーがどれだけの量の，およびどのような「対人関係上の問題」を引き出したかが，ベテランのカウンセラーにとってすぐにわかることである．
+そこで，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとビギナーのカウンセラーとの会話を可視化するWebシステムを開発した．本提案システムはベテランのカウンセラーをユーザーとして想定した．このシステムをベテランのカウンセラーが使用することによって期待されることは，ベテランからビギナーへのカウンセリング指導において，ビギナーのカウンセラーがクライエントにどのような質問を投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」を引き出したかが，ベテランのカウンセラーにとってすぐにわかることである．
 
 
 
