--- a/chapter4.tex
+++ b/chapter4.tex
@@ -62,7 +62,7 @@
  \end{figure}
 
 д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
-╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkutomoji.jsдЄ╗╚═╤д╖д┐бе
+╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
 ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓▓╚┬▓б╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓▓╚┬▓б╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
 
 ╦▄е╖е╣е╞ерд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
@@ -315,7 +315,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бд12╠╛д╬└ь╠ч▓╚д╦╦▄е╖е╣е╞ердЄ╕лд╞ддд┐д└днбд░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бе
 
 
-\subsection{╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╟╝■╩╒д╬╚п╕└дЄ╔╜╝и}
+\subsection{╕╢╩╕╔╜╝и╡б╟╜}
 
 
 
@@ -338,7 +338,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 \subsection{еще╕еке▄е┐еє╔╜╝ид▐д╟д╬╔м═╫╗■┤╓}
 еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
 
-е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бед╜д╬╞т═╞д╧╝бд╦╝ид╣дтд╬д╟двдыбеб╓епещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╕╜дьд╞дддыд╜д╬╛ь╜ъд╟бдепещ
+д▐д┐бде╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бед╜д╬╞т═╞д╧╝бд╦╝ид╣дтд╬д╟двдыбеб╓епещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╕╜дьд╞дддыд╜д╬╛ь╜ъд╟бдепещ
 едеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞╩м╬рд╟дндыдшджд╦д╖д╞ддд┐д└д▒ды
 д╚║о═Ёд╖д╩ддд╟ддддд╬д╟д╣дмбеепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└дм╩м╬ед╡дьд┐
 ╛ь╜ъд╟╩м╬рд╖д╞дддпд╚бд╞├д╦ележеєе╗ещб╝д╬╚п╕└дм▓┐д╦╕■д▒д╞длдмдядлдъд╦дпдпбд
@@ -379,18 +379,18 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 ╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
-\subsection{╩╕╗·┐зд╬▓■┴▒}
+\subsection{╟█┐зд╬▓■┴▒}
 ╩╕╗·┐зд╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐бе
 б╓╩╕╗·д╬┐зд╟д╣дмбд▓л┐зд╚│е┐зд╧бде╨е├епд╬╟Єд╚длд╓д├д╞╕лдид╦дпдпд╩д├
 д╞дддыд╚╗╫ддд▐д╣бе╗фд╬ете╦е┐б╝д╬е╓еыб╝ещеде╚еле├е╚д╬▒╞╢┴длдтд╖дьд▐д╗дєдмбд
-╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫
+╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫д╖д┐дмд├д╞бд╦▄е╖е╣е╞ерд╬бд╞├д╦ележеєе╗ещб╝д╦┤╪д╣ды╜─╦└дф╝┬║▌д╬╡н╜╥д╬╔┴▓шд╦дкддд╞▓■┴▒д╣ды╔м═╫дмдвдыбе
 
 \subsection{╝┤д╬╔╜╝и}
 └╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╜─╝┤▓г╝┤дм▓┐дЄ╔╜д╖д╞дыдлдядлдщд╩ддд╬д╟бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
 
-\subsection{╩╕╗·дм╛од╡дд}
+\subsection{╩╕╗·д╬┬чднд╡}
 ╩╕╗·д╬┬чднд╡д╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐беб╓ете╦е┐б╝дм╛од╡дд╛ь╣чбдг▒
 ╠╠д╟╕лдшджд╚д╣дыд╚е╒ейеєе╚е╡еде║дм╢╦дсд╞╛од╡дпд╩дъбд╧╖┤уд╦д╚д├д╞д╧╚╜╩╠╔╘
 ╟╜д╚д╩д├д╞д╖д▐ддд▐д╣бее╒ейеєе╚е╡еде║дЄ╛хд▓дыд│д╚д╧д╟днд▐д╣длбй
-б╫
+б╫д╖д┐дмд├д╞бде╒ейеєе╚е╡еде║дЄ┬чдндпд╣ды╔м═╫дмдвдыбе
 
