--- a/chapter5.tex
+++ b/chapter5.tex
@@ -3,18 +3,21 @@
 それを受け，抽出した要件をみたした提案システムの開発を行った．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本章ではその要件をみたした提案システムの概要について説明する．特に，要件を満たすための視覚的表現(Visual Representation, Visual Design)，ユーザーインタラクションなどを重点的に説明する．
 
  \begin{figure}
+%\begin{landscape}
    \begin{center}
-     \includegraphics[width=10cm]{ver160203.png}
+     \includegraphics[width=\linewidth,angle=90]{ver160203.png}
    \end{center}
    \caption{提案システムの模擬データでの可視化結果}
    \label{fig:ver160203}
+%\end{landscape}
  \end{figure}
 
 
 
 
 
-\section{縦棒をマウスオーバーすることで周辺の発言を表示}
+
+\section{原文表示機能}
 \begin{itemize}
 \item どこがどの発言を表しているかわからない
 \item ラジオボタンが多すぎてグラフが下の方にいく
