--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,8 @@
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{bm}
 \usepackage{amsmath}
+\usepackage{lscape}
+\usepackage{url}
 \title{カウンセリングにおける会話の流れの可視化に関する研究}
 \author{上辻 智也}
 \professor{小山田 耕二 教授}
