--- a/chapter8.tex
+++ b/chapter8.tex
@@ -1,6 +1,6 @@
 \section{結論}
 
-本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化するWebシステムを開発した．このシステムをベテランのカウンセラーが使用することによって実現したことは，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどれだけの分量の回答を行ったか，またどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになったことである．
+本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化するWebシステムを開発した．このシステムをベテランのカウンセラーが使用することによって実現したことは，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになったことである．
 
 
 本提案システムのユーザーとして想定しているベテランのカウンセラーからは「この研究が進んでいくことによって，心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になって
@@ -13,29 +13,22 @@
 
 本研究で得られた結論を踏まえて，今後検討するべき課題を以下にまとめる．
 \begin{itemize}
-\item そもそも積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか．
+\item そもそも積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか検証する必要がある．
 \item 本提案システムでは，横軸は患者の全発言の文字数（縦棒同士の間隔は，患者の各発言の文字数に比例），縦軸は，患者の各発言内において，それぞれ「交友」「愛」「仕事」に属する文の数（単位：文）を表しているが，縦軸に関して，たとえば「交友」の場合
-\begin{enumerate}
-  \item 患者の各発言内において，「交友」に属する文の数（単位：文）
-  \item 患者の各発言内において，「交友」に属する文が何文あるかの割合（単位：％）
-  \item 患者の各発言内において， 「交友」に属する文における文字数の合計(単位：文字)
-  \item 患者の各発言内において，全ての文字数に対して「交友」に属する文の文字数が占める割合（単位：％）
-\end{enumerate}
-のどの数値を用いればより適当な判断が可能か，吟味する必要性があると考える．
-\item また，クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
+%\begin{enumerate}
+%  \item 患者の各発言内において，「交友」に属する文の数（単位：文）
+  %\item 患者の各発言内において，「交友」に属する文が何文あるかの割合（単位：％）
+  %\item 患者の各発言内において， 「交友」に属する文における文字数の合計(単位：文字)
+  %\item 患者の各発言内において，全ての文字数に対して「交友」に属する文の文字数が占める割合（単位：％）
+%\end{enumerate}
+どのような数値を用いればより適当な判断が可能か，吟味する必要性があると考える．
+\item クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 \item 縦棒の上に発言番号を振ることで，どの縦棒がどのカウンセラーの発言か，よりわかりやすくする．
-\item アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，次に記す通りのレビューを得た．「クライエントの発話の分類ですが，自身の症状についての記述は，愛・交友・
-仕事のどれにも当てはまらないことが多く，第４のタスクとされるself task自
-己，第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
-ただく方がいいかもしれません．症状に囚われているクライエントは，自己の課題が大半
-になるといえます」
-\item 本提案システム全体の配色面に関して「文字の色ですが，黄色と灰色は，バックの白とかぶって見えにくくなっ
-ていると思います．私のモニターのブルーライトカットの影響かもしれませんが，
-特に黄色は見えませんでした．よって，色を変えていただけると助かります．」「青色の【】は黒字と判別
-がつきにくくなりました．」などのコメントをいただいている．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要性があると考えられる．
+\item アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，「自己」と「スピリチュアル」のグループを加える．
+\item 本提案システム全体の配色面に関してまだ改善の余地があると考える．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要性があると考えられる．
 \item 本提案システムでは，いただいたカウンセリング書き起こしテキストデータを筆者が手動で指定のフォームのJSONファイルにつくりなおしてから，本提案システムのユーザーであるベテランのカウンセラーにそのJSONファイルを渡して本提案システムをお使いいただいていたが，ユーザー側で簡単に自動でカウンセリング書き起こしテキストデータを変換する機能を搭載する必要性もあると考える．
 \item 本システムのユーザーのカウンセラーに，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまうので，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能を提案したところ，是非欲しいとのことであったので，搭載する予定である．
-\item 本提案システムについてまだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くのベテランカウンセラーに使っていただき，SD法などによる定量的評価が必要であると考える．
+\item 本提案システムについてまだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くのベテランカウンセラーに使っていただき，意味差別法\cite{attrakdiff}などによる定量的評価が必要であると考える．
 \end{itemize}
 
 
