--- a/main.bib
+++ b/main.bib
@@ -119,3 +119,19 @@
         pages = "86-95"
 }
 
+
+@ARTICLE{kuromojijs,
+	author = "Takuya Asano",
+	title = "kuromoji.js, \url{https://github.com/takuyaa/kuromoji.js}",
+	year = 2015
+}
+
+
+@ARTICLE{attrakdiff,
+	author = "Hassenzahl, M.",
+	title = "Hedonic, emotional and experiential perspectives on product quality",
+	journal = "C. Ghaoui (Ed.), Encyclopedia of Human Computer Interaction",
+	year = 2006,
+        pages = "266–272"
+}
+
